add bs package search

--- a/bs/packages/13.html
+++ b/bs/packages/13.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 13</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/d/dpkg/libdpkg-perl/">libdpkg-perl</a></td>
               <td>1.21.22</td>
               <td>Dpkg perl modules</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libd/libdrm/libdrm-amdgpu1/">libdrm-amdgpu1</a></td>
               <td>2.4.123-1~bpo12+1</td>
               <td>Userspace interface to amdgpu-specific kernel DRM services -- runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libd/libdrm/libdrm-common/">libdrm-common</a></td>
               <td>2.4.123-1~bpo12+1</td>
               <td>Userspace interface to kernel DRM services -- common files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libd/libdrm/libdrm-intel1/">libdrm-intel1</a></td>
               <td>2.4.123-1~bpo12+1</td>
               <td>Userspace interface to intel-specific kernel DRM services -- runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libd/libdrm/libdrm-nouveau2/">libdrm-nouveau2</a></td>
               <td>2.4.123-1~bpo12+1</td>
               <td>Userspace interface to nouveau-specific kernel DRM services -- runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libd/libdrm/libdrm-radeon1/">libdrm-radeon1</a></td>
               <td>2.4.123-1~bpo12+1</td>
               <td>Userspace interface to radeon-specific kernel DRM services -- runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libd/libdrm/libdrm2/">libdrm2</a></td>
               <td>2.4.123-1~bpo12+1</td>
               <td>Userspace interface to kernel DRM services -- runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/duktape/libduktape207/">libduktape207</a></td>
               <td>2.7.0-2</td>
               <td>embeddable Javascript engine, library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libd/libdv/libdv4/">libdv4</a></td>
               <td>1.0.0-15</td>
               <td>software library for DV format digital video (runtime lib)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libd/libdvbpsi/libdvbpsi10/">libdvbpsi10</a></td>
               <td>1.3.3-1</td>
               <td>library for MPEG TS and DVB PSI tables decoding and generating</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libd/libdvdnav/libdvdnav4/">libdvdnav4</a></td>
               <td>6.1.1-1</td>
               <td>DVD navigation library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libd/libdvdread/libdvdread8/">libdvdread8</a></td>
               <td>6.1.3-1</td>
               <td>library for reading DVDs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/elfutils/libdw1/">libdw1</a></td>
               <td>0.192-4~bpo12+1</td>
               <td>library that provides access to the DWARF debug information</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libe/libeatmydata/libeatmydata1/">libeatmydata1</a></td>
               <td>130-2+b1</td>
               <td>Library and utilities to disable fsync and friends - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libe/libebml/libebml5/">libebml5</a></td>
               <td>1.4.4-1+deb12u1</td>
               <td>access library for the EBML format (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libe/libedit/libedit2/">libedit2</a></td>
               <td>3.1-20221030-2</td>
               <td>BSD editline and history libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/editorconfig-core/libeditorconfig0/">libeditorconfig0</a></td>
               <td>0.12.6-0.1</td>
               <td>coding style indenter across editors - library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/efivar/libefiboot1/">libefiboot1</a></td>
               <td>37-6</td>
               <td>Library to manage UEFI variables</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/efivar/libefivar1/">libefivar1</a></td>
               <td>37-6</td>
               <td>Library to manage UEFI variables</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mesa/libegl-mesa0/">libegl-mesa0</a></td>
               <td>24.2.8-1~bpo12+1</td>
               <td>free implementation of the EGL API -- Mesa vendor library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libglvnd/libegl1/">libegl1</a></td>
               <td>1.6.0-1</td>
               <td>Vendor neutral GL dispatch library -- EGL support</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/elfutils/libelf1/">libelf1</a></td>
               <td>0.192-4~bpo12+1</td>
               <td>library to read and write ELF files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libe/libencode-locale-perl/libencode-locale-perl/">libencode-locale-perl</a></td>
               <td>1.05-3</td>
               <td>utility to determine the locale encoding</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libe/libepoxy/libepoxy0/">libepoxy0</a></td>
               <td>1.5.10-1</td>
               <td>OpenGL function pointer management library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/ebook-tools/libepub0/">libepub0</a></td>
               <td>0.2.2-6</td>
               <td>library to work with the EPUB file format - runtime library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libe/liberror-perl/liberror-perl/">liberror-perl</a></td>
               <td>0.17029-2</td>
               <td>Perl module for error/exception handling in an OO-ish way</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libe/libevdev/libevdev2/">libevdev2</a></td>
               <td>1.13.0+dfsg-1</td>
               <td>wrapper library for evdev devices</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libe/libevent/libevent-2.1-7/">libevent-2.1-7</a></td>
               <td>2.1.12-stable-8</td>
               <td>Asynchronous event notification library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libe/libexif/libexif12/">libexif12</a></td>
               <td>0.6.24-1+b1</td>
               <td>library to parse EXIF files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/exiv2/libexiv2-27/">libexiv2-27</a></td>
               <td>0.27.6-1</td>
               <td>EXIF/IPTC/XMP metadata manipulation library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/expat/libexpat1/">libexpat1</a></td>
               <td>2.5.0-1+deb12u1</td>
               <td>XML parsing C library - runtime library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/e2fsprogs/libext2fs2/">libext2fs2</a></td>
               <td>1.47.2~rc1-2~bpo12+2</td>
               <td>ext2/ext3/ext4 file system libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/faad2/libfaad2/">libfaad2</a></td>
               <td>2.10.1-1</td>
               <td>freeware Advanced Audio Decoder - runtime files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libf/libfakekey/libfakekey0/">libfakekey0</a></td>
               <td>0.3+git20170516-2</td>
               <td>library for converting characters to X key-presses [runtime]</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fakeroot/libfakeroot/">libfakeroot</a></td>
               <td>1.31-1.2</td>
               <td>tool for simulating superuser privileges - shared libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/libfdisk1/">libfdisk1</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>fdisk partitioning library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libf/libffado/libffado2/">libffado2</a></td>
               <td>2.4.7-1</td>
               <td>FFADO API</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libf/libffi/libffi8/">libffi8</a></td>
               <td>3.4.4-1</td>
               <td>Foreign Function Interface library runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fftw3/libfftw3-double3/">libfftw3-double3</a></td>
               <td>3.3.10-1</td>
               <td>Library for computing Fast Fourier Transforms - Double precision</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fftw3/libfftw3-single3/">libfftw3-single3</a></td>
               <td>3.3.10-1</td>
               <td>Library for computing Fast Fourier Transforms - Single precision</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libf/libfido2/libfido2-1/">libfido2-1</a></td>
               <td>1.12.0-2+b1</td>
               <td>library for generating and verifying FIDO 2.0 objects</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libf/libfile-basedir-perl/libfile-basedir-perl/">libfile-basedir-perl</a></td>
               <td>0.09-2</td>
               <td>Perl module to use the freedesktop basedir specification</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libf/libfile-desktopentry-perl/libfile-desktopentry-perl/">libfile-desktopentry-perl</a></td>
               <td>0.22-3</td>
               <td>Perl module to handle freedesktop .desktop files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libf/libfile-fcntllock-perl/libfile-fcntllock-perl/">libfile-fcntllock-perl</a></td>
               <td>0.22-4+b1</td>
               <td>Perl module for file locking with fcntl(2)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libf/libfile-listing-perl/libfile-listing-perl/">libfile-listing-perl</a></td>
               <td>6.15-1</td>
               <td>module to parse directory listings</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libf/libfile-mimeinfo-perl/libfile-mimeinfo-perl/">libfile-mimeinfo-perl</a></td>
               <td>0.33-1</td>
               <td>Perl module to determine file types</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/flac/libflac12/">libflac12</a></td>
               <td>1.4.2+ds-2</td>
               <td>Free Lossless Audio Codec - runtime C library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/flashrom/libflashrom1/">libflashrom1</a></td>
               <td>1.3.0-2.1</td>
               <td>Identify, read, write, erase, and verify BIOS/ROM/flash chips - library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/flatpak/libflatpak0/">libflatpak0</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>Application deployment framework for desktop apps (library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/flite/libflite1/">libflite1</a></td>
               <td>2.2-5</td>
               <td>Small run-time speech synthesis engine - shared libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
