--- a/bs/packages/16.html
+++ b/bs/packages/16.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 16</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/libh/libheif/libheif-plugin-x265/">libheif-plugin-x265</a></td>
               <td>1.19.7-1~bpo12+1</td>
               <td>HEIF and AVIF file format decoder and encoder - x265 plugin</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libh/libheif/libheif1/">libheif1</a></td>
               <td>1.19.7-1~bpo12+1</td>
               <td>HEIF and AVIF file format decoder and encoder - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hfsplus/libhfsp0/">libhfsp0</a></td>
               <td>1.0.4-17</td>
               <td>Shared library to access HFS+ formatted volumes</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hfst-ospell/libhfstospell11/">libhfstospell11</a></td>
               <td>0.5.3-1+b2</td>
               <td>HFST spell checker runtime libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nettle/libhogweed6/">libhogweed6</a></td>
               <td>3.8.1-2</td>
               <td>low level cryptographic library (public-key cryptos)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhtml-form-perl/libhtml-form-perl/">libhtml-form-perl</a></td>
               <td>6.11-1</td>
               <td>module that represents an HTML form element</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhtml-format-perl/libhtml-format-perl/">libhtml-format-perl</a></td>
               <td>2.16-2</td>
               <td>module for transforming HTML into various formats</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libh/libhtml-parser-perl/libhtml-parser-perl/">libhtml-parser-perl</a></td>
               <td>3.81-1</td>
               <td>collection of modules that parse HTML text documents</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhtml-tagset-perl/libhtml-tagset-perl/">libhtml-tagset-perl</a></td>
               <td>3.20-6</td>
               <td>data tables pertaining to HTML</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhtml-tree-perl/libhtml-tree-perl/">libhtml-tree-perl</a></td>
               <td>5.07-3</td>
               <td>Perl module to represent and create HTML syntax trees</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhttp-cookies-perl/libhttp-cookies-perl/">libhttp-cookies-perl</a></td>
               <td>6.10-1</td>
               <td>HTTP cookie jars</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhttp-daemon-perl/libhttp-daemon-perl/">libhttp-daemon-perl</a></td>
               <td>6.16-1</td>
               <td>simple http server class</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhttp-date-perl/libhttp-date-perl/">libhttp-date-perl</a></td>
               <td>6.05-2</td>
               <td>module of date conversion routines</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhttp-message-perl/libhttp-message-perl/">libhttp-message-perl</a></td>
               <td>6.44-1</td>
               <td>perl interface to HTTP style messages</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhttp-negotiate-perl/libhttp-negotiate-perl/">libhttp-negotiate-perl</a></td>
               <td>6.01-2</td>
               <td>implementation of content negotiation</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/http-parser/libhttp-parser2.9/">libhttp-parser2.9</a></td>
               <td>2.9.4-5</td>
               <td>parser for HTTP messages written in C</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hunspell/libhunspell-1.7-0/">libhunspell-1.7-0</a></td>
               <td>1.7.1-1</td>
               <td>spell checker and morphological analyzer (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/highway/libhwy1/">libhwy1</a></td>
               <td>1.0.3-3+deb12u1</td>
               <td>Efficient and performance-portable SIMD wrapper (runtime files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/ibus/libibus-1.0-5/">libibus-1.0-5</a></td>
               <td>1.5.31-1~bpo12+1</td>
               <td>Intelligent Input Bus - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libical3/libical3/">libical3</a></td>
               <td>3.0.16-1+b1</td>
               <td>iCalendar library implementation in C (runtime)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libice/libice6/">libice6</a></td>
               <td>2:1.0.10-1</td>
               <td>X11 Inter-Client Exchange library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/icu/libicu72/">libicu72</a></td>
               <td>72.1-3</td>
               <td>International Components for Unicode</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libidn/libidn12/">libidn12</a></td>
               <td>1.41-1</td>
               <td>GNU Libidn library, implementation of IETF IDN specifications</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libidn2/libidn2-0/">libidn2-0</a></td>
               <td>2.3.3-1+b1</td>
               <td>Internationalized domain names (IDNA2008/TR46) library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libiec61883/libiec61883-0/">libiec61883-0</a></td>
               <td>1.2.0-6+b1</td>
               <td>partial implementation of IEC 61883 (shared lib)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/intel-gmmlib/libigdgmm12/">libigdgmm12</a></td>
               <td>22.3.3+ds1-1</td>
               <td>Intel Graphics Memory Management Library -- shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/ijs/libijs-0.35/">libijs-0.35</a></td>
               <td>0.35-15</td>
               <td>IJS raster image transport protocol: shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libi/libimage-exiftool-perl/libimage-exiftool-perl/">libimage-exiftool-perl</a></td>
               <td>12.57+dfsg-1</td>
               <td>library and program to read and write meta information in multimedia files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/imath/libimath-3-1-29/">libimath-3-1-29</a></td>
               <td>3.1.6-1</td>
               <td>Utility libraries from ASF used by OpenEXR - runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libimobiledevice/libimobiledevice6/">libimobiledevice6</a></td>
               <td>1.3.0-6+b3</td>
               <td>Library for communicating with iPhone and other Apple devices</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libinih/libinih1/">libinih1</a></td>
               <td>55-1</td>
               <td>simple .INI file parser</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libinput/libinput-bin/">libinput-bin</a></td>
               <td>1.22.1-1</td>
               <td>input device management and event handling library - udev quirks</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libinput/libinput10/">libinput10</a></td>
               <td>1.22.1-1</td>
               <td>input device management and event handling library - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libinstpatch/libinstpatch-1.0-2/">libinstpatch-1.0-2</a></td>
               <td>1.1.6-1</td>
               <td>MIDI instrument editing library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libi/libio-html-perl/libio-html-perl/">libio-html-perl</a></td>
               <td>1.004-3</td>
               <td>open an HTML file with automatic charset detection</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libio-pty-perl/libio-pty-perl/">libio-pty-perl</a></td>
               <td>1:1.17-1</td>
               <td>Perl module for pseudo tty IO</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libi/libio-socket-ssl-perl/libio-socket-ssl-perl/">libio-socket-ssl-perl</a></td>
               <td>2.081-2</td>
               <td>Perl module implementing object oriented interface to SSL sockets</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/i/io-stringy/libio-stringy-perl/">libio-stringy-perl</a></td>
               <td>2.111-3</td>
               <td>modules for I/O on in-core objects (strings/arrays)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/iptables/libip4tc2/">libip4tc2</a></td>
               <td>1.8.9-2</td>
               <td>netfilter libip4tc library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/iptables/libip6tc2/">libip6tc2</a></td>
               <td>1.8.9-2</td>
               <td>netfilter libip6tc library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libi/libipc-run-perl/libipc-run-perl/">libipc-run-perl</a></td>
               <td>20220807.0-1</td>
               <td>Perl module for running processes</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libi/libipc-system-simple-perl/libipc-system-simple-perl/">libipc-system-simple-perl</a></td>
               <td>1.30-2</td>
               <td>Perl module to run commands simply, with detailed diagnostics</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/intel-processor-trace/libipt2/">libipt2</a></td>
               <td>2.0.5-1</td>
               <td>Intel Processor Trace Decoder Library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/isl/libisl23/">libisl23</a></td>
               <td>0.25-1.1</td>
               <td>manipulating sets and relations of integer points bounded by linear constraints</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libisoburn/libisoburn1/">libisoburn1</a></td>
               <td>1.5.4-4</td>
               <td>library to handle creation and inspection of ISO-9660 file systems</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libisofs/libisofs6/">libisofs6</a></td>
               <td>1.5.4-1</td>
               <td>library to create ISO 9660 images</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libitm1/">libitm1</a></td>
               <td>12.2.0-14+deb12u1</td>
               <td>GNU Transactional Memory Library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pupnp-1.8/libixml10/">libixml10</a></td>
               <td>1:1.8.4-2</td>
               <td>Portable SDK for UPnP Devices, version 1.8 (ixml shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jackd2/libjack-jackd2-0/">libjack-jackd2-0</a></td>
               <td>1.9.21~dfsg-3</td>
               <td>JACK Audio Connection Kit (libraries)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jansson/libjansson4/">libjansson4</a></td>
               <td>2.14-2</td>
               <td>C library for encoding, decoding and manipulating JSON data</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
