--- a/bs/packages/18.html
+++ b/bs/packages/18.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 18</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/b/baloo-widgets/libkf5baloowidgets5/">libkf5baloowidgets5</a></td>
               <td>4:22.12.3-1</td>
               <td>Wigets for use with Baloo</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bluez-qt/libkf5bluezqt-data/">libkf5bluezqt-data</a></td>
               <td>5.103.0-1</td>
               <td>data files for bluez-qt</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bluez-qt/libkf5bluezqt6/">libkf5bluezqt6</a></td>
               <td>5.103.0-1</td>
               <td>Qt wrapper for bluez</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kbookmarks/libkf5bookmarks-data/">libkf5bookmarks-data</a></td>
               <td>5.103.0-1</td>
               <td>Qt library with support for bookmarks and the XBEL format.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kbookmarks/libkf5bookmarks5/">libkf5bookmarks5</a></td>
               <td>5.103.0-1</td>
               <td>Qt library with support for bookmarks and the XBEL format.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcalcore/libkf5calendarcore5abi2/">libkf5calendarcore5abi2</a></td>
               <td>5:5.103.0-1</td>
               <td>calendar access framework</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/libkf5calendarevents5/">libkf5calendarevents5</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks -- calendarevents</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libkf5calendarsupport/libkf5calendarsupport-data/">libkf5calendarsupport-data</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM Calendar support - data files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5calendarsupport/libkf5calendarsupport5abi1/">libkf5calendarsupport5abi1</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM Calendar support - library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcalutils/libkf5calendarutils5/">libkf5calendarutils5</a></td>
               <td>4:22.12.3-1</td>
               <td>library with utility functions for the handling of calendar data</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kcodecs/libkf5codecs-data/">libkf5codecs-data</a></td>
               <td>5.103.0-1</td>
               <td>collection of methods to manipulate strings</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcodecs/libkf5codecs5/">libkf5codecs5</a></td>
               <td>5.103.0-1</td>
               <td>collection of methods to manipulate strings</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kcompletion/libkf5completion-data/">libkf5completion-data</a></td>
               <td>5.103.0-1</td>
               <td>Widgets with advanced auto-completion features.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcompletion/libkf5completion5/">libkf5completion5</a></td>
               <td>5.103.0-1</td>
               <td>Widgets with advanced auto-completion features.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kconfig/libkf5config-bin/">libkf5config-bin</a></td>
               <td>5.103.0-2</td>
               <td>configuration settings framework for Qt</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kconfig/libkf5config-data/">libkf5config-data</a></td>
               <td>5.103.0-2</td>
               <td>configuration settings framework for Qt</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kconfig/libkf5configcore5/">libkf5configcore5</a></td>
               <td>5.103.0-2</td>
               <td>configuration settings framework for Qt</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kconfig/libkf5configgui5/">libkf5configgui5</a></td>
               <td>5.103.0-2</td>
               <td>configuration settings framework for Qt</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kconfig/libkf5configqml5/">libkf5configqml5</a></td>
               <td>5.103.0-2</td>
               <td>configuration settings framework for Qt</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kconfigwidgets/libkf5configwidgets-data/">libkf5configwidgets-data</a></td>
               <td>5.103.0-1</td>
               <td>Extra widgets for easier configuration support.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kconfigwidgets/libkf5configwidgets5/">libkf5configwidgets5</a></td>
               <td>5.103.0-1</td>
               <td>Extra widgets for easier configuration support.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-contacts/libkf5contacteditor5/">libkf5contacteditor5</a></td>
               <td>4:22.12.3-1</td>
               <td>Akonadi contact editor library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kcontacts/libkf5contacts-data/">libkf5contacts-data</a></td>
               <td>5:5.103.0-1</td>
               <td>data files for kcontacts</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcontacts/libkf5contacts5/">libkf5contacts5</a></td>
               <td>5:5.103.0-1</td>
               <td>address book API for KDE frameworks</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kcoreaddons/libkf5coreaddons-data/">libkf5coreaddons-data</a></td>
               <td>5.103.0-1</td>
               <td>KDE Frameworks 5 addons to QtCore - data files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcoreaddons/libkf5coreaddons5/">libkf5coreaddons5</a></td>
               <td>5.103.0-1</td>
               <td>KDE Frameworks 5 addons to QtCore</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcrash/libkf5crash5/">libkf5crash5</a></td>
               <td>5.103.0-1</td>
               <td>Support for application crash analysis and bug report from apps</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kdav/libkf5dav-data/">libkf5dav-data</a></td>
               <td>1:5.103.0-1</td>
               <td>DAV protocol implementation with KJobs - arch independent files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdav/libkf5dav5/">libkf5dav5</a></td>
               <td>1:5.103.0-1</td>
               <td>DAV protocol implementation with KJobs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdbusaddons/libkf5dbusaddons-bin/">libkf5dbusaddons-bin</a></td>
               <td>5.103.0-1</td>
               <td>class library for qtdbus</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kdbusaddons/libkf5dbusaddons-data/">libkf5dbusaddons-data</a></td>
               <td>5.103.0-1</td>
               <td>class library for qtdbus</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdbusaddons/libkf5dbusaddons5/">libkf5dbusaddons5</a></td>
               <td>5.103.0-1</td>
               <td>class library for qtdbus</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kdeclarative/libkf5declarative-data/">libkf5declarative-data</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/libkf5declarative5/">libkf5declarative5</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kdnssd-kf5/libkf5dnssd-data/">libkf5dnssd-data</a></td>
               <td>5.103.0-1</td>
               <td>Abstraction to system DNSSD features.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdnssd-kf5/libkf5dnssd5/">libkf5dnssd5</a></td>
               <td>5.103.0-1</td>
               <td>Abstraction to system DNSSD features.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdoctools/libkf5doctools5/">libkf5doctools5</a></td>
               <td>5.103.0-1</td>
               <td>Tools to generate documentation in various formats from DocBook</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libkf5eventviews/libkf5eventviews-data/">libkf5eventviews-data</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM event handling - data files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5eventviews/libkf5eventviews5abi1/">libkf5eventviews5abi1</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM event handling - library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kfilemetadata-kf5/libkf5filemetadata-bin/">libkf5filemetadata-bin</a></td>
               <td>5.103.0-1</td>
               <td>library for extracting file metadata</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kfilemetadata-kf5/libkf5filemetadata-data/">libkf5filemetadata-data</a></td>
               <td>5.103.0-1</td>
               <td>library for extracting file metadata</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kfilemetadata-kf5/libkf5filemetadata3/">libkf5filemetadata3</a></td>
               <td>5.103.0-1</td>
               <td>library for extracting file metadata</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kglobalaccel/libkf5globalaccel-bin/">libkf5globalaccel-bin</a></td>
               <td>5.103.0-1</td>
               <td>Configurable global shortcut support.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kglobalaccel/libkf5globalaccel-data/">libkf5globalaccel-data</a></td>
               <td>5.103.0-1</td>
               <td>Configurable global shortcut support.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kglobalaccel/libkf5globalaccel5/">libkf5globalaccel5</a></td>
               <td>5.103.0-1</td>
               <td>Configurable global shortcut support.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kglobalaccel/libkf5globalaccelprivate5/">libkf5globalaccelprivate5</a></td>
               <td>5.103.0-1</td>
               <td>Configurable global shortcut support - private runtime library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5grantleetheme/libkf5grantleetheme-plugins/">libkf5grantleetheme-plugins</a></td>
               <td>22.12.3-1</td>
               <td>KDE PIM grantlee theme support - plugins</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5grantleetheme/libkf5grantleetheme5/">libkf5grantleetheme5</a></td>
               <td>22.12.3-1</td>
               <td>KDE PIM grantlee theme support - library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libkf5gravatar/libkf5gravatar-data/">libkf5gravatar-data</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM gravatar library - data files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5gravatar/libkf5gravatar5abi2/">libkf5gravatar5abi2</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM gravatar library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
