--- a/bs/packages/20.html
+++ b/bs/packages/20.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 20</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/libk/libkf5mailcommon/libkf5mailcommon5abi2/">libkf5mailcommon5abi2</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM email utility library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5mailimporter/libkf5mailimporter5/">libkf5mailimporter5</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM Mail importer library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5mailimporter/libkf5mailimporterakonadi5/">libkf5mailimporterakonadi5</a></td>
               <td>4:22.12.3-1</td>
               <td>KDE PIM Mail importer Akonadi library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kmbox/libkf5mbox5/">libkf5mbox5</a></td>
               <td>22.12.3-1</td>
               <td>library for handling mbox mailboxes</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5messagecomposer5abi1/">libkf5messagecomposer5abi1</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KDE PIM messaging library, composer library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5messagecore5abi1/">libkf5messagecore5abi1</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KDE PIM messaging library, core library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5messagelist5abi1/">libkf5messagelist5abi1</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KDE PIM messaging library, message list library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5messageviewer5abi1/">libkf5messageviewer5abi1</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KDE PIM messaging library, message viewer library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5mimetreeparser5abi1/">libkf5mimetreeparser5abi1</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KDE PIM Mime Tree parser library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/modemmanager-qt/libkf5modemmanagerqt6/">libkf5modemmanagerqt6</a></td>
               <td>5.103.0-1</td>
               <td>Qt wrapper library for ModemManager</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/networkmanager-qt/libkf5networkmanagerqt6/">libkf5networkmanagerqt6</a></td>
               <td>5.103.0-1</td>
               <td>Qt wrapper for NetworkManager - library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuff-data/">libkf5newstuff-data</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuff5/">libkf5newstuff5</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuffcore5/">libkf5newstuffcore5</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuffwidgets5/">libkf5newstuffwidgets5</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/knotifications/libkf5notifications-data/">libkf5notifications-data</a></td>
               <td>5.103.0-1</td>
               <td>Framework for desktop notifications</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knotifications/libkf5notifications5/">libkf5notifications5</a></td>
               <td>5.103.0-1</td>
               <td>Framework for desktop notifications</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/knotifyconfig/libkf5notifyconfig-data/">libkf5notifyconfig-data</a></td>
               <td>5.103.0-1</td>
               <td>Configuration system for KNotify.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knotifyconfig/libkf5notifyconfig5/">libkf5notifyconfig5</a></td>
               <td>5.103.0-1</td>
               <td>Configuration system for KNotify.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kpackage/libkf5package-data/">libkf5package-data</a></td>
               <td>5.103.0-1</td>
               <td>non-binary asset management framework</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpackage/libkf5package5/">libkf5package5</a></td>
               <td>5.103.0-1</td>
               <td>non-binary asset management framework</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kparts/libkf5parts-data/">libkf5parts-data</a></td>
               <td>5.103.0-1</td>
               <td>Document centric plugin system.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kparts/libkf5parts-plugins/">libkf5parts-plugins</a></td>
               <td>5.103.0-1</td>
               <td>Document centric plugin system.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kparts/libkf5parts5/">libkf5parts5</a></td>
               <td>5.103.0-1</td>
               <td>Document centric plugin system.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kpeople/libkf5people-data/">libkf5people-data</a></td>
               <td>5.103.0-1</td>
               <td>data files for kpeople</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpeople/libkf5people5/">libkf5people5</a></td>
               <td>5.103.0-1</td>
               <td>framework providing unified access to contacts aggregated by person</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpeople/libkf5peoplebackend5/">libkf5peoplebackend5</a></td>
               <td>5.103.0-1</td>
               <td>framework providing unified access to contacts aggregated by person</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpeople/libkf5peoplewidgets5/">libkf5peoplewidgets5</a></td>
               <td>5.103.0-1</td>
               <td>framework providing unified access to contacts aggregated by person</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libkf5pimcommon/libkf5pimcommon-data/">libkf5pimcommon-data</a></td>
               <td>4:22.12.3-1</td>
               <td>Common library for KDE PIM - data files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5pimcommon/libkf5pimcommonakonadi5abi1/">libkf5pimcommonakonadi5abi1</a></td>
               <td>4:22.12.3-1</td>
               <td>Common library for KDE PIM Akonadi</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-framework/libkf5plasma5/">libkf5plasma5</a></td>
               <td>5.103.0-1+deb12u1</td>
               <td>Plasma Runtime components</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-framework/libkf5plasmaquick5/">libkf5plasmaquick5</a></td>
               <td>5.103.0-1+deb12u1</td>
               <td>Plasma Runtime components</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/prison-kf5/libkf5prison5/">libkf5prison5</a></td>
               <td>5.103.0-1</td>
               <td>barcode API for Qt</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/prison-kf5/libkf5prisonscanner5/">libkf5prisonscanner5</a></td>
               <td>5.103.0-1</td>
               <td>barcode API for Qt - barcode scanner</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kpty/libkf5pty-data/">libkf5pty-data</a></td>
               <td>5.103.0-1</td>
               <td>Pty abstraction.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpty/libkf5pty5/">libkf5pty5</a></td>
               <td>5.103.0-1</td>
               <td>Pty abstraction.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio-qt/libkf5pulseaudioqt3/">libkf5pulseaudioqt3</a></td>
               <td>1.3-2+b1</td>
               <td>Pulseaudio bindings library for Qt</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/purpose/libkf5purpose-bin/">libkf5purpose-bin</a></td>
               <td>5.103.0-1</td>
               <td>abstraction to provide and leverage actions of a specific kind, runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/purpose/libkf5purpose5/">libkf5purpose5</a></td>
               <td>5.103.0-1</td>
               <td>library for abstractions to get the developer's purposes fulfilled</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/libkf5quickaddons5/">libkf5quickaddons5</a></td>
               <td>5.103.0-1</td>
               <td>provides integration of QML and KDE frameworks -- quickaddons</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/krunner/libkf5runner5/">libkf5runner5</a></td>
               <td>5.103.0-1</td>
               <td>Used to write plugins loaded at runtime called "Runners".</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkscreen/libkf5screen-bin/">libkf5screen-bin</a></td>
               <td>4:5.27.5-2</td>
               <td>library for screen management - helpers</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libkscreen/libkf5screen-data/">libkf5screen-data</a></td>
               <td>4:5.27.5-2</td>
               <td>library for screen management - data files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkscreen/libkf5screen8/">libkf5screen8</a></td>
               <td>4:5.27.5-2</td>
               <td>library for screen management - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkscreen/libkf5screendpms8/">libkf5screendpms8</a></td>
               <td>4:5.27.5-2</td>
               <td>library for screen management - dpms support library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kservice/libkf5service-bin/">libkf5service-bin</a></td>
               <td>5.103.0-1</td>
               <td>Advanced plugin and service introspection</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kservice/libkf5service-data/">libkf5service-data</a></td>
               <td>5.103.0-1</td>
               <td>Advanced plugin and service introspection</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kservice/libkf5service5/">libkf5service5</a></td>
               <td>5.103.0-1</td>
               <td>Advanced plugin and service introspection</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/solid/libkf5solid5/">libkf5solid5</a></td>
               <td>5.103.0-1</td>
               <td>Qt library to query and control hardware</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/solid/libkf5solid5-data/">libkf5solid5-data</a></td>
               <td>5.103.0-1</td>
               <td>Qt library to query and control hardware</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
