--- a/bs/packages/29.html
+++ b/bs/packages/29.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 29</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/t/tpm2-tss/libtss2-tcti-cmd0/">libtss2-tcti-cmd0</a></td>
               <td>3.2.1-3</td>
               <td>TPM2 Software stack library - TSS and TCTI libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tpm2-tss/libtss2-tcti-device0/">libtss2-tcti-device0</a></td>
               <td>3.2.1-3</td>
               <td>TPM2 Software stack library - TSS and TCTI libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tpm2-tss/libtss2-tcti-mssim0/">libtss2-tcti-mssim0</a></td>
               <td>3.2.1-3</td>
               <td>TPM2 Software stack library - TSS and TCTI libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tpm2-tss/libtss2-tcti-swtpm0/">libtss2-tcti-swtpm0</a></td>
               <td>3.2.1-3</td>
               <td>TPM2 Software stack library - TSS and TCTI libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tpm2-tss/libtss2-tctildr0/">libtss2-tctildr0</a></td>
               <td>3.2.1-3</td>
               <td>TPM2 Software stack library - TSS and TCTI libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/twolame/libtwolame0/">libtwolame0</a></td>
               <td>0.4.0-2</td>
               <td>MPEG Audio Layer 2 encoding library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libubsan1/">libubsan1</a></td>
               <td>12.2.0-14+deb12u1</td>
               <td>UBSan -- undefined behaviour sanitizer (runtime)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/uchardet/libuchardet0/">libuchardet0</a></td>
               <td>0.0.7-1</td>
               <td>universal charset detection library - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/libudev1/">libudev1</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>libudev shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libudfread/libudfread0/">libudfread0</a></td>
               <td>1.1.2-1</td>
               <td>UDF reader library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/udisks2/libudisks2-0/">libudisks2-0</a></td>
               <td>2.9.4-4</td>
               <td>GObject based library to access udisks2</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/suitesparse/libumfpack5/">libumfpack5</a></td>
               <td>1:5.12.0+dfsg-2</td>
               <td>sparse LU factorization library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/unbound/libunbound8/">libunbound8</a></td>
               <td>1.17.1-2+deb12u2</td>
               <td>library implementing DNS resolution and validation</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libunicode-linebreak-perl/libunicode-linebreak-perl/">libunicode-linebreak-perl</a></td>
               <td>0.0.20190101-1+b5</td>
               <td>UAX #14 Unicode Line Breaking Algorithm</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libunistring/libunistring2/">libunistring2</a></td>
               <td>1.0-2</td>
               <td>Unicode string library for C</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/libreoffice/libuno-purpenvhelpergcc3-3/">libuno-purpenvhelpergcc3-3</a></td>
               <td>4:25.2.2-1~bpo12+1</td>
               <td>LibreOffice UNO runtime environment -- "purpose environment" helper</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/libreoffice/libuno-sal3/">libuno-sal3</a></td>
               <td>4:25.2.2-1~bpo12+1</td>
               <td>LibreOffice UNO runtime environment -- SAL public library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/libreoffice/libuno-salhelpergcc3-3/">libuno-salhelpergcc3-3</a></td>
               <td>4:25.2.2-1~bpo12+1</td>
               <td>LibreOffice UNO runtime environment -- SAL helpers for C++ library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/llvm-toolchain-16/libunwind-16/">libunwind-16</a></td>
               <td>1:16.0.6-15~deb12u1</td>
               <td>production-quality unwinder</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libunwind/libunwind8/">libunwind8</a></td>
               <td>1.6.2-3</td>
               <td>library to determine the call-chain of a program - runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pupnp-1.8/libupnp13/">libupnp13</a></td>
               <td>1:1.8.4-2</td>
               <td>Portable SDK for UPnP Devices, version 1.8 (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/upower/libupower-glib3/">libupower-glib3</a></td>
               <td>0.99.20-2</td>
               <td>abstraction for power management - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/liburcu/liburcu8/">liburcu8</a></td>
               <td>0.13.2-1</td>
               <td>userspace RCU (read-copy-update) library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libu/liburi-perl/liburi-perl/">liburi-perl</a></td>
               <td>5.17-1</td>
               <td>module to manipulate and access URI strings</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/liburing/liburing2/">liburing2</a></td>
               <td>2.3-3</td>
               <td>Linux kernel io_uring access library - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libusb-1.0/libusb-1.0-0/">libusb-1.0-0</a></td>
               <td>2:1.0.26-1</td>
               <td>userspace USB programming library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libusbmuxd/libusbmuxd6/">libusbmuxd6</a></td>
               <td>2.0.2-3</td>
               <td>USB multiplexor daemon for iPhone and iPod Touch devices - library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libutempter/libutempter0/">libutempter0</a></td>
               <td>1.2.1-3</td>
               <td>privileged helper for utmp/wtmp updates (runtime)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/libuuid1/">libuuid1</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>Universally Unique ID library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libuv1/libuv1/">libuv1</a></td>
               <td>1.44.2-1+deb12u1</td>
               <td>asynchronous event notification library - runtime library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/v4l-utils/libv4l-0/">libv4l-0</a></td>
               <td>1.22.1-5+b2</td>
               <td>Collection of video4linux support libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/v4l-utils/libv4lconvert0/">libv4lconvert0</a></td>
               <td>1.22.1-5+b2</td>
               <td>Video4linux frame format conversion library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libva/libva-drm2/">libva-drm2</a></td>
               <td>2.17.0-1</td>
               <td>Video Acceleration (VA) API for Linux -- DRM runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libva/libva-wayland2/">libva-wayland2</a></td>
               <td>2.17.0-1</td>
               <td>Video Acceleration (VA) API for Linux -- Wayland runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libva/libva-x11-2/">libva-x11-2</a></td>
               <td>2.17.0-1</td>
               <td>Video Acceleration (VA) API for Linux -- X11 runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libva/libva2/">libva2</a></td>
               <td>2.17.0-1</td>
               <td>Video Acceleration (VA) API for Linux -- runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvdpau-va-gl/libvdpau-va-gl1/">libvdpau-va-gl1</a></td>
               <td>0.4.2-1+b1</td>
               <td>VDPAU driver with OpenGL/VAAPI backend</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvdpau/libvdpau1/">libvdpau1</a></td>
               <td>1.5-2</td>
               <td>Video Decode and Presentation API for Unix (libraries)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvidstab/libvidstab1.1/">libvidstab1.1</a></td>
               <td>1.1.0-2+b1</td>
               <td>video stabilization library (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvisual/libvisual-0.4-0/">libvisual-0.4-0</a></td>
               <td>0.4.0-19</td>
               <td>audio visualization framework</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvncserver/libvncclient1/">libvncclient1</a></td>
               <td>0.9.14+dfsg-1</td>
               <td>API to write one's own VNC server - client library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vo-aacenc/libvo-aacenc0/">libvo-aacenc0</a></td>
               <td>0.1.3-2</td>
               <td>VisualOn AAC encoder library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vo-amrwbenc/libvo-amrwbenc0/">libvo-amrwbenc0</a></td>
               <td>0.1.3-2</td>
               <td>VisualOn AMR-WB encoder library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvoikko/libvoikko1/">libvoikko1</a></td>
               <td>4.3.1-1+b1</td>
               <td>Library of free natural language processing tools</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/volume-key/libvolume-key1/">libvolume-key1</a></td>
               <td>0.3.12-5+b1</td>
               <td>Library for manipulating storage encryption keys and passphrases</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvorbis/libvorbis0a/">libvorbis0a</a></td>
               <td>1.3.7-1</td>
               <td>decoder library for Vorbis General Audio Compression Codec</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvorbis/libvorbisenc2/">libvorbisenc2</a></td>
               <td>1.3.7-1</td>
               <td>encoder library for Vorbis General Audio Compression Codec</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvorbis/libvorbisfile3/">libvorbisfile3</a></td>
               <td>1.3.7-1</td>
               <td>high-level API for Vorbis General Audio Compression Codec</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvpx/libvpx7/">libvpx7</a></td>
               <td>1.12.0-1+deb12u3</td>
               <td>VP8 and VP9 video codec (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vte2.91/libvte-2.91-0/">libvte-2.91-0</a></td>
               <td>0.70.6-2~deb12u1</td>
               <td>Terminal emulator widget for GTK+ 3.0 - runtime files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
