--- a/bs/packages/3.html
+++ b/bs/packages/3.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 3</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/g/gcc-12/cpp-12/">cpp-12</a></td>
               <td>12.2.0-14+deb12u1</td>
               <td>GNU C preprocessor</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cracklib2/cracklib-runtime/">cracklib-runtime</a></td>
               <td>2.9.6-5+b1</td>
               <td>runtime support for password checker library cracklib2</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cron/cron/">cron</a></td>
               <td>3.0pl1-162</td>
               <td>process scheduling daemon</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/cron/cron-daemon-common/">cron-daemon-common</a></td>
               <td>3.0pl1-162</td>
               <td>process scheduling daemon's configuration files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/crun/crun/">crun</a></td>
               <td>1.8.1-1+deb12u1</td>
               <td>lightweight OCI runtime for running containers</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cryfs/cryfs/">cryfs</a></td>
               <td>0.11.3-5</td>
               <td>encrypt your files and store them in the cloud</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cryptsetup/cryptsetup/">cryptsetup</a></td>
               <td>2:2.6.1-4~deb12u2</td>
               <td>disk encryption support - startup scripts</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cryptsetup/cryptsetup-bin/">cryptsetup-bin</a></td>
               <td>2:2.6.1-4~deb12u2</td>
               <td>disk encryption support - command line tools</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/cryptsetup/cryptsetup-initramfs/">cryptsetup-initramfs</a></td>
               <td>2:2.6.1-4~deb12u2</td>
               <td>disk encryption support - initramfs integration</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cryptsetup-nuke-password/cryptsetup-nuke-password/">cryptsetup-nuke-password</a></td>
               <td>4+openbosniana1</td>
               <td>Erase the LUKS keys with a special password on the unlock prompt</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups/">cups</a></td>
               <td>2.4.2-3+deb12u8</td>
               <td>Common UNIX Printing System(tm) - PPD/driver support, web interface</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups-filters/cups-browsed/">cups-browsed</a></td>
               <td>1.28.17-3+deb12u1</td>
               <td>OpenPrinting CUPS Filters - cups-browsed</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-bsd/">cups-bsd</a></td>
               <td>2.4.2-3+deb12u8</td>
               <td>Common UNIX Printing System(tm) - BSD commands</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-client/">cups-client</a></td>
               <td>2.4.2-3+deb12u8</td>
               <td>Common UNIX Printing System(tm) - client programs (SysV)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/cups/cups-common/">cups-common</a></td>
               <td>2.4.2-3+deb12u8</td>
               <td>Common UNIX Printing System(tm) - common files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-core-drivers/">cups-core-drivers</a></td>
               <td>2.4.2-3+deb12u8</td>
               <td>Common UNIX Printing System(tm) - driverless printing</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-daemon/">cups-daemon</a></td>
               <td>2.4.2-3+deb12u8</td>
               <td>Common UNIX Printing System(tm) - daemon</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups-filters/cups-filters/">cups-filters</a></td>
               <td>1.28.17-3+deb12u1</td>
               <td>OpenPrinting CUPS Filters - Main Package</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups-filters/cups-filters-core-drivers/">cups-filters-core-drivers</a></td>
               <td>1.28.17-3+deb12u1</td>
               <td>OpenPrinting CUPS Filters - Driverless printing</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-ipp-utils/">cups-ipp-utils</a></td>
               <td>2.4.2-3+deb12u8</td>
               <td>Common UNIX Printing System(tm) - IPP developer/admin utilities</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups-pk-helper/cups-pk-helper/">cups-pk-helper</a></td>
               <td>0.2.6-1+b1</td>
               <td>PolicyKit helper to configure cups with fine-grained privileges</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-ppdc/">cups-ppdc</a></td>
               <td>2.4.2-3+deb12u8</td>
               <td>Common UNIX Printing System(tm) - PPD manipulation utilities</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/cups/cups-server-common/">cups-server-common</a></td>
               <td>2.4.2-3+deb12u8</td>
               <td>Common UNIX Printing System(tm) - server common files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/curl/curl/">curl</a></td>
               <td>8.12.1-3~bpo12+1</td>
               <td>command line tool for transferring data with URL syntax</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dash/dash/">dash</a></td>
               <td>0.5.12-2</td>
               <td>POSIX-compliant shell</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dbus/dbus/">dbus</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (system message bus)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dbus/dbus-bin/">dbus-bin</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (command line utilities)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dbus/dbus-daemon/">dbus-daemon</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (reference message bus)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/dbus/dbus-session-bus-common/">dbus-session-bus-common</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (session bus configuration)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/dbus/dbus-system-bus-common/">dbus-system-bus-common</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (system bus configuration)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dbus/dbus-user-session/">dbus-user-session</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (systemd --user integration)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bc/dc/">dc</a></td>
               <td>1.07.1-3+b1</td>
               <td>GNU dc arbitrary precision reverse-polish calculator</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dconf/dconf-cli/">dconf-cli</a></td>
               <td>0.40.0-4</td>
               <td>simple configuration storage system - utilities</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dconf/dconf-gsettings-backend/">dconf-gsettings-backend</a></td>
               <td>0.40.0-4</td>
               <td>simple configuration storage system - GSettings back-end</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dconf/dconf-service/">dconf-service</a></td>
               <td>0.40.0-4</td>
               <td>simple configuration storage system - D-Bus service</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dctrl-tools/dctrl-tools/">dctrl-tools</a></td>
               <td>2.24-3+b1</td>
               <td>Command-line tools to process Debian package information</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/debconf/debconf/">debconf</a></td>
               <td>1.5.82</td>
               <td>Debian configuration management system</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/debconf/debconf-i18n/">debconf-i18n</a></td>
               <td>1.5.82</td>
               <td>full internationalization support for debconf</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/debconf-kde/debconf-kde-data/">debconf-kde-data</a></td>
               <td>1.1.0-1</td>
               <td>Debconf KDE data files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/debconf-kde/debconf-kde-helper/">debconf-kde-helper</a></td>
               <td>1.1.0-1</td>
               <td>Debconf KDE GUI frontend tool</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/debian-archive-keyring/debian-archive-keyring/">debian-archive-keyring</a></td>
               <td>2023.3+deb12u2</td>
               <td>GnuPG archive keys of the Debian archive</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/debian-faq/debian-faq/">debian-faq</a></td>
               <td>11.1</td>
               <td>Debian Frequently Asked Questions</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/debianutils/debianutils/">debianutils</a></td>
               <td>5.7-0.5~deb12u1</td>
               <td>Miscellaneous utilities specific to Debian</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/deepin-keyring/deepin-keyring/">deepin-keyring</a></td>
               <td>2021.06.07-1</td>
               <td>GnuPG keys of the Deepin archive</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/java-common/default-jdk/">default-jdk</a></td>
               <td>2:1.17-74</td>
               <td>Standard Java or Java compatible Development Kit</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/java-common/default-jdk-headless/">default-jdk-headless</a></td>
               <td>2:1.17-74</td>
               <td>Standard Java or Java compatible Development Kit (headless)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/java-common/default-jre/">default-jre</a></td>
               <td>2:1.17-74</td>
               <td>Standard Java or Java compatible Runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/java-common/default-jre-headless/">default-jre-headless</a></td>
               <td>2:1.17-74</td>
               <td>Standard Java or Java compatible Runtime (headless)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/m/mysql-defaults/default-mysql-client-core/">default-mysql-client-core</a></td>
               <td>1.1.0</td>
               <td>MySQL database core client binaries (metapackage)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/m/mysql-defaults/default-mysql-server-core/">default-mysql-server-core</a></td>
               <td>1.1.0</td>
               <td>MySQL database server binaries (metapackage)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
