--- a/bs/packages/6.html
+++ b/bs/packages/6.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 6</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/n/network-manager/gir1.2-nm-1.0/">gir1.2-nm-1.0</a></td>
               <td>1.42.4-1+deb12u1</td>
               <td>GObject introspection data for the libnm library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnotify/gir1.2-notify-0.7/">gir1.2-notify-0.7</a></td>
               <td>0.8.1-1</td>
               <td>sends desktop notifications to a notification daemon (Introspection files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/packagekit/gir1.2-packagekitglib-1.0/">gir1.2-packagekitglib-1.0</a></td>
               <td>1.2.6-5</td>
               <td>GObject introspection data for the PackageKit GLib library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pango1.0/gir1.2-pango-1.0/">gir1.2-pango-1.0</a></td>
               <td>1.50.12+ds-1</td>
               <td>Layout and rendering of internationalized text - gir bindings</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/policykit-1/gir1.2-polkit-1.0/">gir1.2-polkit-1.0</a></td>
               <td>122-3</td>
               <td>GObject introspection data for polkit</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/poppler/gir1.2-poppler-0.18/">gir1.2-poppler-0.18</a></td>
               <td>22.12.0-2+deb12u1</td>
               <td>GObject introspection data for poppler-glib</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/librsvg/gir1.2-rsvg-2.0/">gir1.2-rsvg-2.0</a></td>
               <td>2.54.7+dfsg-1~deb12u1</td>
               <td>gir files for renderer library for SVG files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsecret/gir1.2-secret-1/">gir1.2-secret-1</a></td>
               <td>0.20.5-3</td>
               <td>Secret store (GObject-Introspection)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/w/webkit2gtk/gir1.2-webkit2-4.0/">gir1.2-webkit2-4.0</a></td>
               <td>2.48.1-2~deb12u1</td>
               <td>Web content engine library for GTK - GObject introspection data</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/git/git/">git</a></td>
               <td>1:2.39.5-0+deb12u2</td>
               <td>fast, scalable, distributed revision control system</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/git/git-man/">git-man</a></td>
               <td>1:2.39.5-0+deb12u2</td>
               <td>fast, scalable, distributed revision control system (manual pages)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/glib-networking/glib-networking/">glib-networking</a></td>
               <td>2.74.0-4</td>
               <td>network-related giomodules for GLib</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/glib-networking/glib-networking-common/">glib-networking-common</a></td>
               <td>2.74.0-4</td>
               <td>network-related giomodules for GLib - data files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/glib-networking/glib-networking-services/">glib-networking-services</a></td>
               <td>2.74.0-4</td>
               <td>network-related giomodules for GLib - D-Bus services</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gnome-packagekit/gnome-packagekit-common/">gnome-packagekit-common</a></td>
               <td>43.0-1</td>
               <td>Common data files for GNOME PackageKit</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gnupg2/gnupg/">gnupg</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU privacy guard - a free PGP replacement</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gnupg2/gnupg-l10n/">gnupg-l10n</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU privacy guard - localization files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gnupg2/gnupg-utils/">gnupg-utils</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU privacy guard - utility programs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gnupg2/gnupg2/">gnupg2</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU privacy guard - a free PGP replacement (dummy transitional package)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gocryptfs/gocryptfs/">gocryptfs</a></td>
               <td>2.3-1+b4</td>
               <td>Encrypted overlay filesystem written in Go</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/golang-1.19/golang-1.19-go/">golang-1.19-go</a></td>
               <td>1.19.8-2</td>
               <td>Go programming language compiler, linker, compiled stdlib</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/golang-1.19/golang-1.19-src/">golang-1.19-src</a></td>
               <td>1.19.8-2</td>
               <td>Go programming language - source files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/golang-1.23/golang-1.23-go/">golang-1.23-go</a></td>
               <td>1.23.5-1~bpo12+1</td>
               <td>Go programming language compiler, linker, compiled stdlib</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/golang-1.23/golang-1.23-src/">golang-1.23-src</a></td>
               <td>1.23.5-1~bpo12+1</td>
               <td>Go programming language - source files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/golang-github-containers-common/golang-github-containers-common/">golang-github-containers-common</a></td>
               <td>0.50.1+ds1-4</td>
               <td>Common files for github.com/containers repositories</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/golang-github-containers-image/golang-github-containers-image/">golang-github-containers-image</a></td>
               <td>5.26.1-2~bpo12+1</td>
               <td>Configuration files and manpages for github.com/containers repositories</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/golang-defaults/golang-go/">golang-go</a></td>
               <td>2:1.23~2~bpo12+1</td>
               <td>Go programming language compiler, linker, compiled stdlib</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/golang-defaults/golang-src/">golang-src</a></td>
               <td>2:1.23~2~bpo12+1</td>
               <td>Go programming language - source files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gpa/gpa/">gpa</a></td>
               <td>0.10.0-5</td>
               <td>GNU Privacy Assistant (GPA)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gpart/gpart/">gpart</a></td>
               <td>1:0.3-10</td>
               <td>Guess PC disk partition table, find lost partitions</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gnupg2/gpg/">gpg</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU Privacy Guard -- minimalist public key operations</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gnupg2/gpg-agent/">gpg-agent</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU privacy guard - cryptographic agent</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gnupg2/gpg-wks-client/">gpg-wks-client</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU privacy guard - Web Key Service client</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gnupg2/gpg-wks-server/">gpg-wks-server</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU privacy guard - Web Key Service server</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gnupg2/gpgconf/">gpgconf</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU privacy guard - core configuration utilities</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gnupg2/gpgsm/">gpgsm</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU privacy guard - S/MIME version</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gnupg2/gpgv/">gpgv</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU privacy guard - signature verification tool</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grep/grep/">grep</a></td>
               <td>3.8-5</td>
               <td>GNU grep, egrep and fgrep</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/groff/groff-base/">groff-base</a></td>
               <td>1.22.4-10</td>
               <td>GNU troff text-formatting system (base system components)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-common/">grub-common</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader (common files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-coreboot/">grub-coreboot</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Coreboot version)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-coreboot-bin/">grub-coreboot-bin</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Coreboot modules)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-coreboot-dbg/">grub-coreboot-dbg</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Coreboot debug files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-efi/">grub-efi</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (dummy package)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-efi-amd64/">grub-efi-amd64</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (EFI-AMD64 version)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-efi-amd64-bin/">grub-efi-amd64-bin</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (EFI-AMD64 modules)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-efi-amd64-dbg/">grub-efi-amd64-dbg</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (EFI-AMD64 debug files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-efi-amd64-signed-template/">grub-efi-amd64-signed-template</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (EFI-AMD64 signing template)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-efi-ia32/">grub-efi-ia32</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (EFI-IA32 version)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-efi-ia32-bin/">grub-efi-ia32-bin</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (EFI-IA32 modules)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
