--- a/bs/packages/7.html
+++ b/bs/packages/7.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 7</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/g/grub2/grub-efi-ia32-dbg/">grub-efi-ia32-dbg</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (EFI-IA32 debug files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-emu/">grub-emu</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (emulated version)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-emu-dbg/">grub-emu-dbg</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (emulated debug files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-firmware-qemu/">grub-firmware-qemu</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRUB firmware image for QEMU</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-ieee1275/">grub-ieee1275</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Open Firmware version)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-ieee1275-bin/">grub-ieee1275-bin</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Open Firmware modules)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-ieee1275-dbg/">grub-ieee1275-dbg</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Open Firmware debug files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-linuxbios/">grub-linuxbios</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (dummy package)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-pc/">grub-pc</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (PC/BIOS version)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-pc-bin/">grub-pc-bin</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (PC/BIOS modules)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-pc-dbg/">grub-pc-dbg</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (PC/BIOS debug files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-rescue-pc/">grub-rescue-pc</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRUB bootable rescue images, version 2 (PC/BIOS version)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-theme-starfield/">grub-theme-starfield</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (starfield theme)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-xen/">grub-xen</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Xen version)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-xen-bin/">grub-xen-bin</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Xen modules)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-xen-dbg/">grub-xen-dbg</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Xen debug files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-xen-host/">grub-xen-host</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Xen host version)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub2/">grub2</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (dummy package)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub2-common/">grub2-common</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader (common files for version 2)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gsettings-desktop-schemas/gsettings-desktop-schemas/">gsettings-desktop-schemas</a></td>
               <td>43.0-1</td>
               <td>GSettings desktop-wide schemas</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-urw-base35/gsfonts/">gsfonts</a></td>
               <td>2:20200910-7</td>
               <td>transitional dummy package (gsfonts -> fonts-urw-base35)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/clutter-gst-3.0/gstreamer1.0-clutter-3.0/">gstreamer1.0-clutter-3.0</a></td>
               <td>3.0.27-3</td>
               <td>Clutter PLugin for GStreamer 1.0</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-base1.0/gstreamer1.0-gl/">gstreamer1.0-gl</a></td>
               <td>1.22.0-3+deb12u4</td>
               <td>GStreamer plugins for GL</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-libav1.0/gstreamer1.0-libav/">gstreamer1.0-libav</a></td>
               <td>1.22.0-2</td>
               <td>ffmpeg plugin for GStreamer</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-bad1.0/gstreamer1.0-plugins-bad/">gstreamer1.0-plugins-bad</a></td>
               <td>1.22.0-4+deb12u5</td>
               <td>GStreamer plugins from the "bad" set</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-base1.0/gstreamer1.0-plugins-base/">gstreamer1.0-plugins-base</a></td>
               <td>1.22.0-3+deb12u4</td>
               <td>GStreamer plugins from the "base" set</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-good1.0/gstreamer1.0-plugins-good/">gstreamer1.0-plugins-good</a></td>
               <td>1.22.0-5+deb12u2</td>
               <td>GStreamer plugins from the "good" set</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-ugly1.0/gstreamer1.0-plugins-ugly/">gstreamer1.0-plugins-ugly</a></td>
               <td>1.22.0-2+deb12u1</td>
               <td>GStreamer plugins from the "ugly" set</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-base1.0/gstreamer1.0-x/">gstreamer1.0-x</a></td>
               <td>1.22.0-3+deb12u4</td>
               <td>GStreamer plugins for X11 and Pango</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+3.0/gtk-update-icon-cache/">gtk-update-icon-cache</a></td>
               <td>3.24.38-2~deb12u3</td>
               <td>icon theme caching utility</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+2.0/gtk2-engines-pixbuf/">gtk2-engines-pixbuf</a></td>
               <td>2.24.33-2+deb12u1</td>
               <td>pixbuf-based theme for GTK 2</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gui-ufw/gufw/">gufw</a></td>
               <td>22.04.0-1</td>
               <td>graphical user interface for ufw</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gvfs/gvfs/">gvfs</a></td>
               <td>1.50.3-1</td>
               <td>userspace virtual filesystem - GIO module</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gvfs/gvfs-common/">gvfs-common</a></td>
               <td>1.50.3-1</td>
               <td>userspace virtual filesystem - common data files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gvfs/gvfs-daemons/">gvfs-daemons</a></td>
               <td>1.50.3-1</td>
               <td>userspace virtual filesystem - servers</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gvfs/gvfs-libs/">gvfs-libs</a></td>
               <td>1.50.3-1</td>
               <td>userspace virtual filesystem - private libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gwenview/gwenview/">gwenview</a></td>
               <td>4:22.12.3-1</td>
               <td>image viewer</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gyp/gyp/">gyp</a></td>
               <td>0.1+20220404git9ecf45e-2</td>
               <td>Cross-platform build script generator</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gzip/gzip/">gzip</a></td>
               <td>1.12-1</td>
               <td>GNU compression utilities</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/haveged/haveged/">haveged</a></td>
               <td>1.9.14-1+b1</td>
               <td>Linux entropy source using the HAVEGE algorithm</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hfsplus/hfsplus/">hfsplus</a></td>
               <td>1.0.4-17</td>
               <td>Tools to access HFS+ formatted volumes</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hfsutils/hfsutils/">hfsutils</a></td>
               <td>3.2.6-15</td>
               <td>Tools for reading and writing Macintosh volumes</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/h/hicolor-icon-theme/hicolor-icon-theme/">hicolor-icon-theme</a></td>
               <td>0.17-2</td>
               <td>default fallback theme for FreeDesktop.org icon themes</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hostname/hostname/">hostname</a></td>
               <td>3.23+nmu1</td>
               <td>utility to set/show the host name or domain name</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/scowl/hunspell-en-us/">hunspell-en-us</a></td>
               <td>1:2020.12.07-2</td>
               <td>English_american dictionary for hunspell</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/h/hwdata/hwdata/">hwdata</a></td>
               <td>0.368-1</td>
               <td>hardware identification / configuration data</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/linux/hyperv-daemons/">hyperv-daemons</a></td>
               <td>6.12.22-1~bpo12+1</td>
               <td>Support daemons for Linux running on Hyper-V</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/intel-vaapi-driver/i965-va-driver/">i965-va-driver</a></td>
               <td>2.4.1+dfsg1-1</td>
               <td>VAAPI driver for Intel G45 & HD Graphics family</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/i/ibus/ibus-data/">ibus-data</a></td>
               <td>1.5.31-1~bpo12+1</td>
               <td>Intelligent Input Bus - data files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/ifupdown/ifupdown/">ifupdown</a></td>
               <td>0.8.41</td>
               <td>high level tools to configure network interfaces</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
