--- a/bs/packages/11.html
+++ b/bs/packages/11.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 11</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/libb/libblockdev/libblockdev-fs2/">libblockdev-fs2</a></td>
               <td>2.28-2</td>
               <td>file system plugin for libblockdev</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libb/libblockdev/libblockdev-loop2/">libblockdev-loop2</a></td>
               <td>2.28-2</td>
               <td>Loop device plugin for libblockdev</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libb/libblockdev/libblockdev-part-err2/">libblockdev-part-err2</a></td>
               <td>2.28-2</td>
               <td>Partition error utility functions for libblockdev</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libb/libblockdev/libblockdev-part2/">libblockdev-part2</a></td>
               <td>2.28-2</td>
               <td>Partitioning plugin for libblockdev</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libb/libblockdev/libblockdev-swap2/">libblockdev-swap2</a></td>
               <td>2.28-2</td>
               <td>Swap plugin for libblockdev</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libb/libblockdev/libblockdev-utils2/">libblockdev-utils2</a></td>
               <td>2.28-2</td>
               <td>Utility functions for libblockdev</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libb/libblockdev/libblockdev2/">libblockdev2</a></td>
               <td>2.28-2</td>
               <td>Library for manipulating block devices</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bluez/libbluetooth3/">libbluetooth3</a></td>
               <td>5.66-1+deb12u2</td>
               <td>Library to use the BlueZ Linux Bluetooth stack</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libb/libbluray/libbluray2/">libbluray2</a></td>
               <td>1:1.3.4-1</td>
               <td>Blu-ray disc playback support library (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/boost1.74/libboost-chrono1.74.0/">libboost-chrono1.74.0</a></td>
               <td>1.74.0+ds1-21</td>
               <td>C++ representation of time duration, time point, and clocks</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/boost1.74/libboost-filesystem1.74.0/">libboost-filesystem1.74.0</a></td>
               <td>1.74.0+ds1-21</td>
               <td>filesystem operations (portable paths, iteration over directories, etc) in C++</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/boost1.74/libboost-program-options1.74.0/">libboost-program-options1.74.0</a></td>
               <td>1.74.0+ds1-21</td>
               <td>program options library for C++</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/boost1.74/libboost-python1.74.0/">libboost-python1.74.0</a></td>
               <td>1.74.0+ds1-21</td>
               <td>Boost.Python Library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/boost1.74/libboost-thread1.74.0/">libboost-thread1.74.0</a></td>
               <td>1.74.0+ds1-21</td>
               <td>portable C++ multi-threading</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libb/libbpf/libbpf1/">libbpf1</a></td>
               <td>1:1.4.6-1~bpo12+1</td>
               <td>eBPF helper library (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/brltty/libbrlapi0.8/">libbrlapi0.8</a></td>
               <td>6.7-1~bpo12+1</td>
               <td>braille display access via BRLTTY - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/brotli/libbrotli1/">libbrotli1</a></td>
               <td>1.0.9-2+b6</td>
               <td>library implementing brotli encoder and decoder (shared libraries)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libb/libbs2b/libbs2b0/">libbs2b0</a></td>
               <td>3.1.0+dfsg-7</td>
               <td>Bauer stereophonic-to-binaural DSP library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libb/libbsd/libbsd0/">libbsd0</a></td>
               <td>0.11.7-2</td>
               <td>utility functions from BSD systems - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libb/libburn/libburn4/">libburn4</a></td>
               <td>1.5.4-1</td>
               <td>library to provide CD/DVD/BD writing functions</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bzip2/libbz2-1.0/">libbz2-1.0</a></td>
               <td>1.0.8-5+b1</td>
               <td>high-quality block-sorting file compressor library - runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bzip2/libbz2-dev/">libbz2-dev</a></td>
               <td>1.0.8-5+b1</td>
               <td>high-quality block-sorting file compressor library - development</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/llvm-toolchain-16/libc++1-16/">libc++1-16</a></td>
               <td>1:16.0.6-15~deb12u1</td>
               <td>LLVM C++ Standard library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/llvm-toolchain-16/libc++abi1-16/">libc++abi1-16</a></td>
               <td>1:16.0.6-15~deb12u1</td>
               <td>LLVM low level support for a standard C++ library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/glibc/libc-bin/">libc-bin</a></td>
               <td>2.36-9+deb12u10</td>
               <td>GNU C Library: Binaries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/glibc/libc-dev-bin/">libc-dev-bin</a></td>
               <td>2.36-9+deb12u10</td>
               <td>GNU C Library: Development binaries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/glibc/libc-devtools/">libc-devtools</a></td>
               <td>2.36-9+deb12u10</td>
               <td>GNU C Library: Development tools</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/glibc/libc-l10n/">libc-l10n</a></td>
               <td>2.36-9+deb12u10</td>
               <td>GNU C Library: localization files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/glibc/libc6/">libc6</a></td>
               <td>2.36-9+deb12u10</td>
               <td>GNU C Library: Shared libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/glibc/libc6-dev/">libc6-dev</a></td>
               <td>2.36-9+deb12u10</td>
               <td>GNU C Library: Development Libraries and Header Files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libc/libcaca/libcaca0/">libcaca0</a></td>
               <td>0.99.beta20-3</td>
               <td>colour ASCII art library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cairo/libcairo-gobject2/">libcairo-gobject2</a></td>
               <td>1.16.0-7</td>
               <td>Cairo 2D vector graphics library (GObject library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cairo/libcairo-script-interpreter2/">libcairo-script-interpreter2</a></td>
               <td>1.16.0-7</td>
               <td>Cairo 2D vector graphics library (script interpreter)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cairo/libcairo2/">libcairo2</a></td>
               <td>1.16.0-7</td>
               <td>Cairo 2D vector graphics library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cairomm/libcairomm-1.0-1v5/">libcairomm-1.0-1v5</a></td>
               <td>1.14.4-2</td>
               <td>C++ wrappers for Cairo (shared libraries)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/suitesparse/libcamd2/">libcamd2</a></td>
               <td>1:5.12.0+dfsg-2</td>
               <td>symmetric approximate minimum degree library for sparse matrices</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libc/libcanberra/libcanberra-pulse/">libcanberra-pulse</a></td>
               <td>0.30-10</td>
               <td>PulseAudio backend for libcanberra</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libc/libcanberra/libcanberra0/">libcanberra0</a></td>
               <td>0.30-10</td>
               <td>simple abstract interface for playing event sounds</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libc/libcap-ng/libcap-ng0/">libcap-ng0</a></td>
               <td>0.8.3-1+b3</td>
               <td>alternate POSIX capabilities library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libc/libcap2/libcap2/">libcap2</a></td>
               <td>1:2.66-4+deb12u1</td>
               <td>POSIX 1003.1e capabilities (library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libc/libcap2/libcap2-bin/">libcap2-bin</a></td>
               <td>1:2.66-4+deb12u1</td>
               <td>POSIX 1003.1e capabilities (utilities)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libc/libcbor/libcbor0.8/">libcbor0.8</a></td>
               <td>0.8.0-2+b1</td>
               <td>library for parsing and generating CBOR (RFC 7049)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libcc1-0/">libcc1-0</a></td>
               <td>12.2.0-14+deb12u1</td>
               <td>GCC cc1 plugin for GDB</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/suitesparse/libccolamd2/">libccolamd2</a></td>
               <td>1:5.12.0+dfsg-2</td>
               <td>constrained column approximate library for sparse matrices</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libc/libcddb/libcddb2/">libcddb2</a></td>
               <td>1.3.2-7</td>
               <td>library to access CDDB data - runtime files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cdparanoia/libcdparanoia0/">libcdparanoia0</a></td>
               <td>3.10.2+debian-14</td>
               <td>audio extraction tool for sampling CDs (library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/graphviz/libcdt5/">libcdt5</a></td>
               <td>2.42.2-7+deb12u1</td>
               <td>rich set of graph drawing tools - cdt library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/libcelestia1.7/">libcelestia1.7</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>Library for the Celestia space simulator</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/libcelestia1.7-dbgsym/">libcelestia1.7-dbgsym</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>debug symbols for libcelestia1.7</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cfitsio/libcfitsio10/">libcfitsio10</a></td>
               <td>4.2.0-3</td>
               <td>shared library for I/O with FITS format data files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
