--- a/bs/packages/15.html
+++ b/bs/packages/15.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 15</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/g/gnutls28/libgnutls30/">libgnutls30</a></td>
               <td>3.7.9-2+deb12u4</td>
               <td>GNU TLS library - main runtime library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libgomp1/">libgomp1</a></td>
               <td>12.2.0-14+deb12u1</td>
               <td>GCC OpenMP (GOMP) support library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgpg-error/libgpg-error0/">libgpg-error0</a></td>
               <td>1.46-1</td>
               <td>GnuPG development runtime library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gpgme1.0/libgpgme11/">libgpgme11</a></td>
               <td>1.18.0-3+b1</td>
               <td>GPGME - GnuPG Made Easy (library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gpgme1.0/libgpgmepp6/">libgpgmepp6</a></td>
               <td>1.18.0-3+b1</td>
               <td>C++ wrapper library for GPGME</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgphoto2/libgphoto2-6/">libgphoto2-6</a></td>
               <td>2.5.30-1</td>
               <td>gphoto2 digital camera library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libg/libgphoto2/libgphoto2-l10n/">libgphoto2-l10n</a></td>
               <td>2.5.30-1</td>
               <td>gphoto2 digital camera library - localized messages</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgphoto2/libgphoto2-port12/">libgphoto2-port12</a></td>
               <td>2.5.30-1</td>
               <td>gphoto2 digital camera port library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gpm/libgpm2/">libgpm2</a></td>
               <td>1.20.7-10+b1</td>
               <td>General Purpose Mouse - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/binutils/libgprofng0/">libgprofng0</a></td>
               <td>2.40-2</td>
               <td>GNU Next Generation profiler (runtime library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gpsd/libgps28/">libgps28</a></td>
               <td>3.22-4.1+b1</td>
               <td>Global Positioning System - library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grantlee5/libgrantlee-templates5/">libgrantlee-templates5</a></td>
               <td>5.2.0-4</td>
               <td>Grantlee templating library for Qt - Templates</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/graphene/libgraphene-1.0-0/">libgraphene-1.0-0</a></td>
               <td>1.10.8-1</td>
               <td>library of graphic data types</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/graphite2/libgraphite2-3/">libgraphite2-3</a></td>
               <td>1.3.14-1</td>
               <td>Font rendering engine for Complex Scripts -- library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/ghostscript/libgs-common/">libgs-common</a></td>
               <td>10.0.0~dfsg-11+deb12u7</td>
               <td>interpreter for the PostScript language and for PDF - ICC profiles</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/ghostscript/libgs10/">libgs10</a></td>
               <td>10.0.0~dfsg-11+deb12u7</td>
               <td>interpreter for the PostScript language and for PDF - Library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/ghostscript/libgs10-common/">libgs10-common</a></td>
               <td>10.0.0~dfsg-11+deb12u7</td>
               <td>interpreter for the PostScript language and for PDF - common files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gsettings-qt/libgsettings-qt1/">libgsettings-qt1</a></td>
               <td>0.2-5</td>
               <td>library to access GSettings from Qt (shared libraries)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgsm/libgsm1/">libgsm1</a></td>
               <td>1.0.22-1</td>
               <td>Shared libraries for GSM speech compressor</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/krb5/libgssapi-krb5-2/">libgssapi-krb5-2</a></td>
               <td>1.20.1-2+deb12u3</td>
               <td>MIT Kerberos runtime libraries - krb5 GSS-API Mechanism</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gssdp/libgssdp-1.6-0/">libgssdp-1.6-0</a></td>
               <td>1.6.2-2</td>
               <td>GObject-based library for SSDP</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-base1.0/libgstreamer-gl1.0-0/">libgstreamer-gl1.0-0</a></td>
               <td>1.22.0-3+deb12u4</td>
               <td>GStreamer GL libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-bad1.0/libgstreamer-plugins-bad1.0-0/">libgstreamer-plugins-bad1.0-0</a></td>
               <td>1.22.0-4+deb12u5</td>
               <td>GStreamer libraries from the "bad" set</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-base1.0/libgstreamer-plugins-base1.0-0/">libgstreamer-plugins-base1.0-0</a></td>
               <td>1.22.0-3+deb12u4</td>
               <td>GStreamer libraries from the "base" set</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gstreamer1.0/libgstreamer1.0-0/">libgstreamer1.0-0</a></td>
               <td>1.22.0-2+deb12u1</td>
               <td>Core GStreamer libraries and elements</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+3.0/libgtk-3-0/">libgtk-3-0</a></td>
               <td>3.24.38-2~deb12u3</td>
               <td>GTK graphical user interface library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+3.0/libgtk-3-bin/">libgtk-3-bin</a></td>
               <td>3.24.38-2~deb12u3</td>
               <td>programs for the GTK graphical user interface library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gtk+3.0/libgtk-3-common/">libgtk-3-common</a></td>
               <td>3.24.38-2~deb12u3</td>
               <td>common files for the GTK graphical user interface library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk4/libgtk-4-1/">libgtk-4-1</a></td>
               <td>4.8.3+ds-2+deb12u1</td>
               <td>GTK graphical user interface library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk4/libgtk-4-bin/">libgtk-4-bin</a></td>
               <td>4.8.3+ds-2+deb12u1</td>
               <td>programs for the GTK graphical user interface library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gtk4/libgtk-4-common/">libgtk-4-common</a></td>
               <td>4.8.3+ds-2+deb12u1</td>
               <td>common files for the GTK graphical user interface library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+2.0/libgtk2.0-0/">libgtk2.0-0</a></td>
               <td>2.24.33-2+deb12u1</td>
               <td>GTK graphical user interface library - old version</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+2.0/libgtk2.0-bin/">libgtk2.0-bin</a></td>
               <td>2.24.33-2+deb12u1</td>
               <td>programs for the GTK graphical user interface library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gtk+2.0/libgtk2.0-common/">libgtk2.0-common</a></td>
               <td>2.24.33-2+deb12u1</td>
               <td>common files for the GTK graphical user interface library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtkmm3.0/libgtkmm-3.0-1v5/">libgtkmm-3.0-1v5</a></td>
               <td>3.24.7-1</td>
               <td>C++ wrappers for GTK+ (shared libraries)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gts/libgts-0.7-5/">libgts-0.7-5</a></td>
               <td>0.7.6+darcs121130-5+b1</td>
               <td>library to deal with 3D computational surface meshes</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gts/libgts-bin/">libgts-bin</a></td>
               <td>0.7.6+darcs121130-5+b1</td>
               <td>utility binaries for libgts</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgudev/libgudev-1.0-0/">libgudev-1.0-0</a></td>
               <td>237-2</td>
               <td>GObject-based wrapper library for libudev</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gupnp/libgupnp-1.6-0/">libgupnp-1.6-0</a></td>
               <td>1.6.3-1</td>
               <td>GObject-based library for UPnP</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gupnp-igd/libgupnp-igd-1.0-4/">libgupnp-igd-1.0-4</a></td>
               <td>1.2.0-3</td>
               <td>library to handle UPnP IGD port mapping</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgusb/libgusb2/">libgusb2</a></td>
               <td>0.3.10-1</td>
               <td>GLib wrapper around libusb1</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/graphviz/libgvc6/">libgvc6</a></td>
               <td>2.42.2-7+deb12u1</td>
               <td>rich set of graph drawing tools - gvc library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/graphviz/libgvpr2/">libgvpr2</a></td>
               <td>2.42.2-7+deb12u1</td>
               <td>rich set of graph drawing tools - gvpr library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libh/libhandy-1/libhandy-1-0/">libhandy-1-0</a></td>
               <td>1.8.1-1</td>
               <td>Library with GTK widgets for mobile phones</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/harfbuzz/libharfbuzz-subset0/">libharfbuzz-subset0</a></td>
               <td>6.0.0+dfsg-3</td>
               <td>OpenType text shaping engine (subset library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/harfbuzz/libharfbuzz0b/">libharfbuzz0b</a></td>
               <td>6.0.0+dfsg-3</td>
               <td>OpenType text shaping engine (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/haveged/libhavege2/">libhavege2</a></td>
               <td>1.9.14-1+b1</td>
               <td>entropy source using the HAVEGE algorithm - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libh/libheif/libheif-plugin-aomenc/">libheif-plugin-aomenc</a></td>
               <td>1.19.7-1~bpo12+1</td>
               <td>HEIF and AVIF file format decoder and encoder - aomenc plugin</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libh/libheif/libheif-plugin-dav1d/">libheif-plugin-dav1d</a></td>
               <td>1.19.7-1~bpo12+1</td>
               <td>HEIF and AVIF file format decoder and encoder - dav1d plugin</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libh/libheif/libheif-plugin-libde265/">libheif-plugin-libde265</a></td>
               <td>1.19.7-1~bpo12+1</td>
               <td>HEIF and AVIF file format decoder and encoder - libde265 plugin</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
