--- a/bs/packages/22.html
+++ b/bs/packages/22.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 22</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/k/kpipewire/libkpipewire5/">libkpipewire5</a></td>
               <td>5.27.5-3</td>
               <td>KDE's Pipewire libraries - libkpipewire5 library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpipewire/libkpipewiredmabuf5/">libkpipewiredmabuf5</a></td>
               <td>5.27.5-3</td>
               <td>KDE's Pipewire libraries - libkpipewiredmabuf5</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpipewire/libkpipewirerecord5/">libkpipewirerecord5</a></td>
               <td>5.27.5-3</td>
               <td>KDE's Pipewire libraries - libkpipewirerecord5</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpmcore/libkpmcore12/">libkpmcore12</a></td>
               <td>22.12.3-1</td>
               <td>KDE Partition Manager Core</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/krb5/libkrb5-3/">libkrb5-3</a></td>
               <td>1.20.1-2+deb12u3</td>
               <td>MIT Kerberos runtime libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/krb5/libkrb5support0/">libkrb5support0</a></td>
               <td>1.20.1-2+deb12u3</td>
               <td>MIT Kerberos runtime libraries - Support library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksba/libksba8/">libksba8</a></td>
               <td>1.6.3-2</td>
               <td>X.509 and CMS support library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kscreenlocker/libkscreenlocker5/">libkscreenlocker5</a></td>
               <td>5.27.5-2</td>
               <td>Secure lock screen architecture</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/libksgrd9/">libksgrd9</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - ksgrd shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/libksysguardformatter1/">libksysguardformatter1</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - ksysguardformatter shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/libksysguardsensorfaces1/">libksysguardsensorfaces1</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - ksysguardsensorfaces shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/libksysguardsensors1/">libksysguardsensors1</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - ksysguardsensors shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/libksysguardsystemstats1/">libksysguardsystemstats1</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - ksysguardsystemstats shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kuserfeedback/libkuserfeedbackcore1/">libkuserfeedbackcore1</a></td>
               <td>1.2.0-2</td>
               <td>user feedback for applications - core library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kuserfeedback/libkuserfeedbackwidgets1/">libkuserfeedbackwidgets1</a></td>
               <td>1.2.0-2</td>
               <td>user feedback for applications - widgets library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwallet-kf5/libkwalletbackend5-5/">libkwalletbackend5-5</a></td>
               <td>5.103.0-1</td>
               <td>Secure and unified container for user passwords.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwin/libkwineffects14/">libkwineffects14</a></td>
               <td>4:5.27.5-3</td>
               <td>KDE window manager effects library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwin/libkwinglutils14/">libkwinglutils14</a></td>
               <td>4:5.27.5-3</td>
               <td>KDE window manager gl utils library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-workspace/libkworkspace5-5/">libkworkspace5-5</a></td>
               <td>4:5.27.5-2+deb12u2</td>
               <td>Plasma Workspace for KF5 library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/graphviz/liblab-gamut1/">liblab-gamut1</a></td>
               <td>2.42.2-7+deb12u1</td>
               <td>rich set of graph drawing tools - liblab_gamut library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lapack/liblapack3/">liblapack3</a></td>
               <td>3.11.0-2</td>
               <td>Library of linear algebra routines 3 - shared version</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/layer-shell-qt/liblayershellqtinterface5/">liblayershellqtinterface5</a></td>
               <td>5.27.5-2</td>
               <td>use the Wayland wl-layer-shell protocol - run-time library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lcms2/liblcms2-2/">liblcms2-2</a></td>
               <td>2.14-2</td>
               <td>Little CMS 2 color management library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libl/libldac/libldacbt-enc2/">libldacbt-enc2</a></td>
               <td>2.0.2.3+git20200429+ed310a0-4</td>
               <td>LDAC Bluetooth encoder library (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openldap/libldap-2.5-0/">libldap-2.5-0</a></td>
               <td>2.5.13+dfsg-5</td>
               <td>OpenLDAP libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lerc/liblerc4/">liblerc4</a></td>
               <td>4.0.0+ds-2</td>
               <td>Limited Error Raster Compression library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lilv/liblilv-0-0/">liblilv-0-0</a></td>
               <td>0.24.14-1</td>
               <td>library for simple use of LV2 plugins</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lirc/liblirc-client0/">liblirc-client0</a></td>
               <td>0.10.1-7.2</td>
               <td>infra-red remote control support - client library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/llvm-toolchain-15/libllvm15/">libllvm15</a></td>
               <td>1:15.0.6-4+b1</td>
               <td>Modular compiler and toolchain technologies, runtime library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lmdb/liblmdb0/">liblmdb0</a></td>
               <td>0.9.24-1</td>
               <td>Lightning Memory-Mapped Database shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libl/liblocale-gettext-perl/liblocale-gettext-perl/">liblocale-gettext-perl</a></td>
               <td>1.07-5</td>
               <td>module using libc functions for internationalization in Perl</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libl/liblockfile/liblockfile-bin/">liblockfile-bin</a></td>
               <td>1.17-1+b1</td>
               <td>support binaries for and cli utilities based on liblockfile</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libl/liblockfile/liblockfile1/">liblockfile1</a></td>
               <td>1.17-1+b1</td>
               <td>NFS-safe locking library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libl/liblouis/liblouis-data/">liblouis-data</a></td>
               <td>3.33.0-1~bpo12+1</td>
               <td>Braille translation library - data</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libl/liblouis/liblouis20/">liblouis20</a></td>
               <td>3.33.0-1~bpo12+1</td>
               <td>Braille translation library - shared libs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libl/liblouisutdml/liblouisutdml-bin/">liblouisutdml-bin</a></td>
               <td>2.12.0-7~bpo12+1</td>
               <td>Braille UTDML translation utilities</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libl/liblouisutdml/liblouisutdml-data/">liblouisutdml-data</a></td>
               <td>2.12.0-7~bpo12+1</td>
               <td>Braille UTDML translation library - data</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libl/liblouisutdml/liblouisutdml9/">liblouisutdml9</a></td>
               <td>2.12.0-7~bpo12+1</td>
               <td>Braille UTDML translation library - shared libs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libl/liblqr/liblqr-1-0/">liblqr-1-0</a></td>
               <td>0.4.2-2.1</td>
               <td>converts plain array images into multi-size representation</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libl/liblrdf/liblrdf0/">liblrdf0</a></td>
               <td>0.6.1-4</td>
               <td>library to manipulate RDF files describing LADSPA plugins</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/liblsan0/">liblsan0</a></td>
               <td>12.2.0-14+deb12u1</td>
               <td>LeakSanitizer -- a memory leak detector (runtime)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libl/libltc/libltc11/">libltc11</a></td>
               <td>1.3.2-1</td>
               <td>linear timecode library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libt/libtool/libltdl7/">libltdl7</a></td>
               <td>2.4.7-7~deb12u1</td>
               <td>System independent dlopen wrapper for GNU libtool</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lua5.2/liblua5.2-0/">liblua5.2-0</a></td>
               <td>5.2.4-3</td>
               <td>Shared library for the Lua interpreter version 5.2</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lua5.4/liblua5.4-0/">liblua5.4-0</a></td>
               <td>5.4.4-3+deb12u1</td>
               <td>Shared library for the Lua interpreter version 5.4</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lvm2/liblvm2cmd2.03/">liblvm2cmd2.03</a></td>
               <td>2.03.16-2</td>
               <td>LVM2 command library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libl/liblwp-mediatypes-perl/liblwp-mediatypes-perl/">liblwp-mediatypes-perl</a></td>
               <td>6.04-2</td>
               <td>module to guess media type for a file or a URL</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libl/liblwp-protocol-https-perl/liblwp-protocol-https-perl/">liblwp-protocol-https-perl</a></td>
               <td>6.10-1</td>
               <td>HTTPS driver for LWP::UserAgent</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lz4/liblz4-1/">liblz4-1</a></td>
               <td>1.9.4-1</td>
               <td>Fast LZ compression algorithm library - runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xz-utils/liblzma-dev/">liblzma-dev</a></td>
               <td>5.4.1-1</td>
               <td>XZ-format compression library - development files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
