--- a/bs/packages/23.html
+++ b/bs/packages/23.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 23</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/x/xz-utils/liblzma5/">liblzma5</a></td>
               <td>5.4.1-1</td>
               <td>XZ-format compression library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lzo2/liblzo2-2/">liblzo2-2</a></td>
               <td>2.10-2</td>
               <td>data compression library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmad/libmad0/">libmad0</a></td>
               <td>0.15.1b-10.1+b1</td>
               <td>MPEG audio decoder library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/file/libmagic-mgc/">libmagic-mgc</a></td>
               <td>1:5.44-3</td>
               <td>File type determination library using "magic" numbers (compiled magic file)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/file/libmagic1/">libmagic1</a></td>
               <td>1:5.44-3</td>
               <td>Recognize the type of data in a file using "magic" numbers - library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libm/libmailtools-perl/libmailtools-perl/">libmailtools-perl</a></td>
               <td>2.21-2</td>
               <td>modules to manipulate email in perl programs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/malcontent/libmalcontent-0-0/">libmalcontent-0-0</a></td>
               <td>0.11.0-4</td>
               <td>library for parental control of applications</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/discount/libmarkdown2/">libmarkdown2</a></td>
               <td>2.2.7-2</td>
               <td>implementation of the Markdown markup language in C (library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmatroska/libmatroska7/">libmatroska7</a></td>
               <td>1.7.1-1</td>
               <td>extensible open standard audio/video container format (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmaxminddb/libmaxminddb0/">libmaxminddb0</a></td>
               <td>1.7.1-1</td>
               <td>IP geolocation database library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mbedtls/libmbedcrypto7/">libmbedcrypto7</a></td>
               <td>2.28.3-1</td>
               <td>lightweight crypto and SSL/TLS library - crypto library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mbedtls/libmbedtls14/">libmbedtls14</a></td>
               <td>2.28.3-1</td>
               <td>lightweight crypto and SSL/TLS library - tls library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mbedtls/libmbedx509-1/">libmbedx509-1</a></td>
               <td>2.28.3-1</td>
               <td>lightweight crypto and SSL/TLS library - x509 certificate library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmbim/libmbim-glib4/">libmbim-glib4</a></td>
               <td>1.28.2-1</td>
               <td>Support library to use the MBIM protocol</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmbim/libmbim-proxy/">libmbim-proxy</a></td>
               <td>1.28.2-1</td>
               <td>Proxy to communicate with MBIM ports</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmbim/libmbim-utils/">libmbim-utils</a></td>
               <td>1.28.2-1</td>
               <td>Utilities to use the MBIM protocol from the command line</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmd/libmd-dev/">libmd-dev</a></td>
               <td>1.0.4-2</td>
               <td>message digest functions from BSD systems - development files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmd/libmd0/">libmd0</a></td>
               <td>1.0.4-2</td>
               <td>message digest functions from BSD systems - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/md4c/libmd4c0/">libmd4c0</a></td>
               <td>0.4.8-1</td>
               <td>Markdown for C</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/metis/libmetis5/">libmetis5</a></td>
               <td>5.1.0.dfsg-7</td>
               <td>Serial Graph Partitioning and Fill-reducing Matrix Ordering</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/intel-mediasdk/libmfx1/">libmfx1</a></td>
               <td>22.5.4-1</td>
               <td>Intel Media SDK -- shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libm/libmime-charset-perl/libmime-charset-perl/">libmime-charset-perl</a></td>
               <td>1.013.1-2</td>
               <td>module for MIME character set information</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/minizip/libminizip1/">libminizip1</a></td>
               <td>1.1-8+deb12u1</td>
               <td>compression library - minizip library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mjpegtools/libmjpegutils-2.1-0/">libmjpegutils-2.1-0</a></td>
               <td>1:2.1.0+debian-7</td>
               <td>MJPEG capture/editing/replay and MPEG encoding toolset (library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/modemmanager/libmm-glib0/">libmm-glib0</a></td>
               <td>1.20.4-1</td>
               <td>D-Bus service for managing modems - shared libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmng/libmng1/">libmng1</a></td>
               <td>1.0.10+dfsg-3.1+b5</td>
               <td>Multiple-image Network Graphics library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmnl/libmnl0/">libmnl0</a></td>
               <td>1.0.4-3</td>
               <td>minimalistic Netlink communication library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmodplug/libmodplug1/">libmodplug1</a></td>
               <td>1:0.8.9.0-3</td>
               <td>shared libraries for mod music based on ModPlug</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/libmount1/">libmount1</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>device mounting library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lame/libmp3lame0/">libmp3lame0</a></td>
               <td>3.100-6</td>
               <td>MP3 encoding library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mpclib3/libmpc3/">libmpc3</a></td>
               <td>1.3.1-1</td>
               <td>multiple precision complex floating-point library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmpc/libmpcdec6/">libmpcdec6</a></td>
               <td>2:0.1~r495-2</td>
               <td>MusePack decoder - library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mpeg2dec/libmpeg2-4/">libmpeg2-4</a></td>
               <td>0.5.1-9</td>
               <td>MPEG1 and MPEG2 video decoder library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mjpegtools/libmpeg2encpp-2.1-0/">libmpeg2encpp-2.1-0</a></td>
               <td>1:2.1.0+debian-7</td>
               <td>MJPEG capture/editing/replay and MPEG encoding toolset (library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mpfr4/libmpfr6/">libmpfr6</a></td>
               <td>4.2.0-1</td>
               <td>multiple precision floating-point computation</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mpg123/libmpg123-0/">libmpg123-0</a></td>
               <td>1.31.2-1+deb12u1</td>
               <td>MPEG layer 1/2/3 audio decoder (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mjpegtools/libmplex2-2.1-0/">libmplex2-2.1-0</a></td>
               <td>1:2.1.0+debian-7</td>
               <td>MJPEG capture/editing/replay and MPEG encoding toolset (library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmspack/libmspack0/">libmspack0</a></td>
               <td>0.11-1</td>
               <td>library for Microsoft compression formats (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mtdev/libmtdev1/">libmtdev1</a></td>
               <td>1.1.6-1</td>
               <td>Multitouch Protocol Translation Library - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libm/libmtp/libmtp-common/">libmtp-common</a></td>
               <td>1.1.20-1</td>
               <td>Media Transfer Protocol (MTP) common files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmtp/libmtp-runtime/">libmtp-runtime</a></td>
               <td>1.1.20-1</td>
               <td>Media Transfer Protocol (MTP) runtime tools</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmtp/libmtp9/">libmtp9</a></td>
               <td>1.1.20-1</td>
               <td>Media Transfer Protocol (MTP) library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmypaint/libmypaint-1.5-1/">libmypaint-1.5-1</a></td>
               <td>1.6.0-2</td>
               <td>brush library for mypaint</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libm/libmypaint/libmypaint-common/">libmypaint-common</a></td>
               <td>1.6.0-2</td>
               <td>brush library for mypaint - common files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libm/libmysofa/libmysofa1/">libmysofa1</a></td>
               <td>1.3.1~dfsg0-1</td>
               <td>library to read HRTFs stored in the AES69-2015 SOFA format</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/ncurses/libncurses6/">libncurses6</a></td>
               <td>6.4-4</td>
               <td>shared libraries for terminal handling</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/ncurses/libncursesw6/">libncursesw6</a></td>
               <td>6.4-4</td>
               <td>shared libraries for terminal handling (wide character support)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libndp/libndp0/">libndp0</a></td>
               <td>1.8-1+deb12u1</td>
               <td>Library for Neighbor Discovery Protocol</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/neon27/libneon27/">libneon27</a></td>
               <td>0.32.5-1</td>
               <td>HTTP and WebDAV client library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnet-dbus-perl/libnet-dbus-perl/">libnet-dbus-perl</a></td>
               <td>1.2.0-2</td>
               <td>Perl extension for the DBus bindings</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
