--- a/bs/packages/31.html
+++ b/bs/packages/31.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 31</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/libx/libxcb/libxcb-shape0/">libxcb-shape0</a></td>
               <td>1.15-1</td>
               <td>X C Binding, shape extension</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcb/libxcb-shm0/">libxcb-shm0</a></td>
               <td>1.15-1</td>
               <td>X C Binding, shm extension</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcb/libxcb-sync1/">libxcb-sync1</a></td>
               <td>1.15-1</td>
               <td>X C Binding, sync extension</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xcb-util/libxcb-util1/">libxcb-util1</a></td>
               <td>0.4.0-1+b1</td>
               <td>utility libraries for X C Binding -- atom, aux and event</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcb/libxcb-xfixes0/">libxcb-xfixes0</a></td>
               <td>1.15-1</td>
               <td>X C Binding, xfixes extension</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcb/libxcb-xinerama0/">libxcb-xinerama0</a></td>
               <td>1.15-1</td>
               <td>X C Binding, xinerama extension</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcb/libxcb-xinput0/">libxcb-xinput0</a></td>
               <td>1.15-1</td>
               <td>X C Binding, xinput extension</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcb/libxcb-xkb1/">libxcb-xkb1</a></td>
               <td>1.15-1</td>
               <td>X C Binding, XKEYBOARD extension</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcb/libxcb-xv0/">libxcb-xv0</a></td>
               <td>1.15-1</td>
               <td>X C Binding, xv extension</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcb/libxcb1/">libxcb1</a></td>
               <td>1.15-1</td>
               <td>X C Binding</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcomposite/libxcomposite1/">libxcomposite1</a></td>
               <td>1:0.4.5-1</td>
               <td>X11 Composite extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcursor/libxcursor1/">libxcursor1</a></td>
               <td>1:1.2.1-1</td>
               <td>X cursor management library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxcvt/libxcvt0/">libxcvt0</a></td>
               <td>0.1.2-1</td>
               <td>VESA CVT standard timing modelines generator -- shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxdamage/libxdamage1/">libxdamage1</a></td>
               <td>1:1.1.6-1</td>
               <td>X11 damaged region extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xdg-utils-cxx/libxdgutilsbasedir1.0.1/">libxdgutilsbasedir1.0.1</a></td>
               <td>1.0.1-3.1</td>
               <td>Implementation BaseDir in Free Desktop Standards for C++</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xdg-utils-cxx/libxdgutilsdesktopentry1.0.1/">libxdgutilsdesktopentry1.0.1</a></td>
               <td>1.0.1-3.1</td>
               <td>Implementation Desktop Entry in Free Desktop Standards for C++</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxdmcp/libxdmcp6/">libxdmcp6</a></td>
               <td>1:1.1.2-3</td>
               <td>X11 Display Manager Control Protocol library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xerces-c/libxerces-c3.2/">libxerces-c3.2</a></td>
               <td>3.2.4+debian-1</td>
               <td>validating XML parser library for C++</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxext/libxext6/">libxext6</a></td>
               <td>2:1.3.4-1+b1</td>
               <td>X11 miscellaneous extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxfixes/libxfixes3/">libxfixes3</a></td>
               <td>1:6.0.0-2</td>
               <td>X11 miscellaneous 'fixes' extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxfont/libxfont2/">libxfont2</a></td>
               <td>1:2.0.6-1</td>
               <td>X11 font rasterisation library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xft/libxft2/">libxft2</a></td>
               <td>2.3.6-1</td>
               <td>FreeType-based font drawing library for X</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxi/libxi6/">libxi6</a></td>
               <td>2:1.8-1+b1</td>
               <td>X11 Input extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxinerama/libxinerama1/">libxinerama1</a></td>
               <td>2:1.1.4-3</td>
               <td>X11 Xinerama extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxkbcommon/libxkbcommon-x11-0/">libxkbcommon-x11-0</a></td>
               <td>1.5.0-1</td>
               <td>library to create keymaps with the XKB X11 protocol</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxkbcommon/libxkbcommon0/">libxkbcommon0</a></td>
               <td>1.5.0-1</td>
               <td>library interface to the XKB compiler - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxkbfile/libxkbfile1/">libxkbfile1</a></td>
               <td>1:1.1.0-1</td>
               <td>X11 keyboard file manipulation library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxml++2.6/libxml++2.6-2v5/">libxml++2.6-2v5</a></td>
               <td>2.40.1-3</td>
               <td>C++ interface to the GNOME XML library (libxml2)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxml-parser-perl/libxml-parser-perl/">libxml-parser-perl</a></td>
               <td>2.46-4</td>
               <td>Perl module for parsing XML files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libx/libxml-twig-perl/libxml-twig-perl/">libxml-twig-perl</a></td>
               <td>1:3.52-2</td>
               <td>Perl module for processing huge XML documents in tree mode</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libx/libxml-xpathengine-perl/libxml-xpathengine-perl/">libxml-xpathengine-perl</a></td>
               <td>0.14-2</td>
               <td>re-usable XPath engine for DOM-like trees</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxml2/libxml2/">libxml2</a></td>
               <td>2.9.14+dfsg-1.3~deb12u1</td>
               <td>GNOME XML library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxml2/libxml2-utils/">libxml2-utils</a></td>
               <td>2.9.14+dfsg-1.3~deb12u1</td>
               <td>GNOME XML library - utilities</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxmlb/libxmlb2/">libxmlb2</a></td>
               <td>0.3.10-2</td>
               <td>Binary XML library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xmlsec1/libxmlsec1/">libxmlsec1</a></td>
               <td>1.2.37-2</td>
               <td>XML security library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xmlsec1/libxmlsec1-openssl/">libxmlsec1-openssl</a></td>
               <td>1.2.37-2</td>
               <td>Openssl engine for the XML security library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxmu/libxmu6/">libxmu6</a></td>
               <td>2:1.1.3-3</td>
               <td>X11 miscellaneous utility library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxmu/libxmuu1/">libxmuu1</a></td>
               <td>2:1.1.3-3</td>
               <td>X11 miscellaneous micro-utility library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxnvctrl/libxnvctrl0/">libxnvctrl0</a></td>
               <td>525.85.05-3~deb12u1</td>
               <td>NV-CONTROL X extension (runtime library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxpm/libxpm4/">libxpm4</a></td>
               <td>1:3.5.12-1.1+deb12u1</td>
               <td>X11 pixmap library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxrandr/libxrandr2/">libxrandr2</a></td>
               <td>2:1.5.2-2+b1</td>
               <td>X11 RandR extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxrender/libxrender1/">libxrender1</a></td>
               <td>1:0.9.10-1.1</td>
               <td>X Rendering Extension client library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxres/libxres1/">libxres1</a></td>
               <td>2:1.2.1-1</td>
               <td>X11 Resource extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxshmfence/libxshmfence1/">libxshmfence1</a></td>
               <td>1.3-1</td>
               <td>X shared memory fences - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxslt/libxslt1.1/">libxslt1.1</a></td>
               <td>1.1.35-1+deb12u1</td>
               <td>XSLT 1.0 processing library - runtime library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxss/libxss1/">libxss1</a></td>
               <td>1:1.2.3-1</td>
               <td>X11 Screen Saver extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxt/libxt6t64/">libxt6t64</a></td>
               <td>1:1.2.1-1.2</td>
               <td>X11 toolkit intrinsics library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/iptables/libxtables12/">libxtables12</a></td>
               <td>1.8.9-2</td>
               <td>netfilter xtables library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxtst/libxtst6/">libxtst6</a></td>
               <td>2:1.2.3-1.1</td>
               <td>X11 Testing -- Record extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxv/libxv1/">libxv1</a></td>
               <td>2:1.0.11-1.1</td>
               <td>X11 Video extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
