--- a/bs/packages/37.html
+++ b/bs/packages/37.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 37</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/n/node-is-arrayish/node-is-arrayish/">node-is-arrayish</a></td>
               <td>0.3.2-3</td>
               <td>Determines if an object can be used as an array</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-binary-path/node-is-binary-path/">node-is-binary-path</a></td>
               <td>2.1.0-5</td>
               <td>check if a filepath is a binary file</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-buffer/node-is-buffer/">node-is-buffer</a></td>
               <td>2.0.5-2</td>
               <td>Determine if an object is a Buffer</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-descriptor/node-is-descriptor/">node-is-descriptor</a></td>
               <td>3.0.0-2</td>
               <td>Returns true if value has characteristics of a valid JS descriptor</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-extendable/node-is-extendable/">node-is-extendable</a></td>
               <td>1.0.1-3</td>
               <td>determine if a value can be extended</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-extglob/node-is-extglob/">node-is-extglob</a></td>
               <td>2.1.1-5</td>
               <td>Node module to return true if a string is an extglob</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-glob/node-is-glob/">node-is-glob</a></td>
               <td>4.0.3-2</td>
               <td>Node module to return true if a string is a glob or extglob</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-number/node-is-number/">node-is-number</a></td>
               <td>7.0.0-4</td>
               <td>returns true if the value is a number</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-path-cwd/node-is-path-cwd/">node-is-path-cwd</a></td>
               <td>2.2.0-2</td>
               <td>Check if a path is CWD</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-path-inside/node-is-path-inside/">node-is-path-inside</a></td>
               <td>3.0.3-2</td>
               <td>Check if a path is inside another path</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-plain-obj/node-is-plain-obj/">node-is-plain-obj</a></td>
               <td>3.0.0-2</td>
               <td>Check if a value is a plain object</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-plain-object/node-is-plain-object/">node-is-plain-object</a></td>
               <td>5.0.0-7</td>
               <td>Returns true if object was created by `Object` constructor</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-primitive/node-is-primitive/">node-is-primitive</a></td>
               <td>3.0.1-3</td>
               <td>Returns `true` if the value is a primitive</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-stream/node-is-stream/">node-is-stream</a></td>
               <td>3.0.0-4</td>
               <td>Check if something is a Node.js stream</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-typedarray/node-is-typedarray/">node-is-typedarray</a></td>
               <td>1.0.0-4</td>
               <td>Nodejs library checking if object is TypedArray</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-windows/node-is-windows/">node-is-windows</a></td>
               <td>1.0.2+~cs1.0.0-1</td>
               <td>True if the platform is windows</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-isarray/node-isarray/">node-isarray</a></td>
               <td>2.0.5-4</td>
               <td>JavaScript Array#isArray for older browsers</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-isexe/node-isexe/">node-isexe</a></td>
               <td>2.0.0+~2.0.1-5</td>
               <td>minimal module to check if a file is executable</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-isobject/node-isobject/">node-isobject</a></td>
               <td>4.0.0-2</td>
               <td>Checks if the value is an object and not an array or null</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-istanbul/node-istanbul/">node-istanbul</a></td>
               <td>0.4.5+repack10+~cs97.25.57-3</td>
               <td>JavaScript code coverage tool</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-jest/node-jest-debbundle/">node-jest-debbundle</a></td>
               <td>29.3.1~ds1+~cs70.48.25-2</td>
               <td>various ittle Node.js modules needed by jest</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-jest/node-jest-worker/">node-jest-worker</a></td>
               <td>29.3.1~ds1+~cs70.48.25-2</td>
               <td>Nodejs module for executing heavy tasks under forked processes in parallel</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-js-tokens/node-js-tokens/">node-js-tokens</a></td>
               <td>8.0.0-2</td>
               <td>Regex that tokenizes JavaScript</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-js-yaml/node-js-yaml/">node-js-yaml</a></td>
               <td>4.1.0+dfsg+~4.0.5-7</td>
               <td>YAML 1.2 parser and serializer</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-jsesc/node-jsesc/">node-jsesc</a></td>
               <td>3.0.2+~3.0.1-1</td>
               <td>Escape JavaScript strings, with short output (Node.js module)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-json-buffer/node-json-buffer/">node-json-buffer</a></td>
               <td>3.0.1+~3.0.0-1</td>
               <td>JSON functions that can convert buffers.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-json-parse-better-errors/node-json-parse-better-errors/">node-json-parse-better-errors</a></td>
               <td>1.0.2+~cs3.3.1-2</td>
               <td>JSON.parse() with context information on error</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-json-schema/node-json-schema/">node-json-schema</a></td>
               <td>0.4.0+~7.0.11-1</td>
               <td>JSON Schema validation and specifications</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-json-schema-traverse/node-json-schema-traverse/">node-json-schema-traverse</a></td>
               <td>1.0.0-3</td>
               <td>Json schema traversal package</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-json-stable-stringify/node-json-stable-stringify/">node-json-stable-stringify</a></td>
               <td>1.0.2+~cs5.2.34-1</td>
               <td>deterministic JSON.stringify()</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-json5/node-json5/">node-json5</a></td>
               <td>2.2.3+dfsg-1</td>
               <td>JSON for the ES5 era</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-jsonify/node-jsonify/">node-jsonify</a></td>
               <td>0.0.1-1</td>
               <td>JSON without touching any globals</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-jsonparse/node-jsonparse/">node-jsonparse</a></td>
               <td>1.3.1-10</td>
               <td>Pure javascript JSON streaming parser for node.js</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-kind-of/node-kind-of/">node-kind-of</a></td>
               <td>6.0.3+dfsg-2</td>
               <td>Get the native type of a value</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-lcov-parse/node-lcov-parse/">node-lcov-parse</a></td>
               <td>1.0.0+20170612git80d039574ed9-6</td>
               <td>Parse lcov results files and return JSON</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-levn/node-levn/">node-levn</a></td>
               <td>0.4.1+dfsg-2</td>
               <td>Light ECMAScript (JavaScript) Value Notation</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-loader-runner/node-loader-runner/">node-loader-runner</a></td>
               <td>4.3.0-1</td>
               <td>Runs (webpack) loaders</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-locate-path/node-locate-path/">node-locate-path</a></td>
               <td>7.1.1-2</td>
               <td>Get the first path that exists on disk of multiple paths</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-lodash/node-lodash/">node-lodash</a></td>
               <td>4.17.21+dfsg+~cs8.31.198.20210220-9</td>
               <td>Lo-dash is a Node.js utility library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-lodash/node-lodash-packages/">node-lodash-packages</a></td>
               <td>4.17.21+dfsg+~cs8.31.198.20210220-9</td>
               <td>Lo-dash is a Node.js utility library (per method packages)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-log-driver/node-log-driver/">node-log-driver</a></td>
               <td>1.2.7+git+20180219+bba1761737-7</td>
               <td>simple logging framework in pure javascript</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-lowercase-keys/node-lowercase-keys/">node-lowercase-keys</a></td>
               <td>2.0.0-2</td>
               <td>Lowercase the keys of an object</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-lru-cache/node-lru-cache/">node-lru-cache</a></td>
               <td>7.14.1-1</td>
               <td>least-recently-used cache object for Node.js</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-make-dir/node-make-dir/">node-make-dir</a></td>
               <td>3.1.0-3</td>
               <td>Make a directory and its parents if needed - Think mkdir -p</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-map-visit/node-map-visit/">node-map-visit</a></td>
               <td>1.0.0-4</td>
               <td>Map `visit` over an array of objects</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-memfs/node-memfs/">node-memfs</a></td>
               <td>3.4.12+~cs1.0.3-1</td>
               <td>In-memory filesystem with Node's API</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-memory-fs/node-memory-fs/">node-memory-fs</a></td>
               <td>0.5.0+~0.3.3-2</td>
               <td>simple in-memory filesystem</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-merge-stream/node-merge-stream/">node-merge-stream</a></td>
               <td>2.0.0+~1.1.2-2</td>
               <td>Create a stream that emits events from multiple other streams</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-micromatch/node-micromatch/">node-micromatch</a></td>
               <td>4.0.5+~4.0.2-1</td>
               <td>Glob matching for javascript/node.js</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-mime/node-mime/">node-mime</a></td>
               <td>3.0.0+dfsg+~cs3.97.1-1</td>
               <td>library for mime-type mapping for Node.js</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
