--- a/bs/packages/48.html
+++ b/bs/packages/48.html
@@ -202,7 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Stranica:<span><b> 48</b> of </span><b>50</b>
                     </p>
-                </div>
+
+<div class="container shadow">
+<h3>Mrežni preglednik paketa</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Naziv paketa..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 
 <div class="container-fluid">
@@ -224,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/s/software-properties/software-properties-common/">software-properties-common</a></td>
               <td>0.99.30-4.1~deb12u1</td>
               <td>manage the repositories that you install software from (common)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/software-properties/software-properties-qt/">software-properties-qt</a></td>
               <td>0.99.30-4.1~deb12u1</td>
               <td>manage the repositories that you install software from (Qt)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sonnet/sonnet-plugins/">sonnet-plugins</a></td>
               <td>5.103.0-1</td>
               <td>spell checking library for Qt, plugins</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/sound-theme-freedesktop/sound-theme-freedesktop/">sound-theme-freedesktop</a></td>
               <td>0.8-2</td>
               <td>freedesktop.org sound theme</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/spice-vdagent/spice-vdagent/">spice-vdagent</a></td>
               <td>0.22.1-3+b2</td>
               <td>Spice agent for Linux</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/squashfs-tools/squashfs-tools/">squashfs-tools</a></td>
               <td>1:4.5.1-1</td>
               <td>Tool to create and append to squashfs filesystems</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sshfs-fuse/sshfs/">sshfs</a></td>
               <td>3.7.3-1.1</td>
               <td>filesystem client based on SSH File Transfer Protocol</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/ssl-cert/ssl-cert/">ssl-cert</a></td>
               <td>1.1.2</td>
               <td>simple debconf wrapper for OpenSSL</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sudo/sudo/">sudo</a></td>
               <td>1.9.13p3-1+deb12u1</td>
               <td>Provide limited super user privileges to specific users</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sweeper/sweeper/">sweeper</a></td>
               <td>4:22.12.3-1</td>
               <td>history and temporary file cleaner</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/syslinux/syslinux-common/">syslinux-common</a></td>
               <td>3:6.04~git20190206.bf6db5b4+dfsg1-3</td>
               <td>collection of bootloaders (common)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/systemd/">systemd</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>system and service manager</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/systemd-coredump/">systemd-coredump</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>tools for storing and retrieving coredumps</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/systemd/systemd-dev/">systemd-dev</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>systemd development files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/systemd-sysv/">systemd-sysv</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>system and service manager - SysV compatibility symlinks</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/systemd-timesyncd/">systemd-timesyncd</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>minimalistic service to synchronize local time with NTP servers</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemsettings/systemsettings/">systemsettings</a></td>
               <td>4:5.27.5-2</td>
               <td>System Settings interface</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sysvinit/sysvinit-utils/">sysvinit-utils</a></td>
               <td>3.08-3~bpo12+2</td>
               <td>System-V-like utilities</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/t1utils/t1utils/">t1utils</a></td>
               <td>1.41-4</td>
               <td>Collection of simple Type 1 font manipulation programs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tar/tar/">tar</a></td>
               <td>1.34+dfsg-1.2+deb12u1</td>
               <td>GNU version of the tar archiving utility</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-bosnian-kde-desktop/">task-bosnian-kde-desktop</a></td>
               <td>3.73+openbosniana5</td>
               <td>Bosnian KDE Plasma desktop</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-desktop/">task-desktop</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>Debian desktop environment</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-kde-desktop/">task-kde-desktop</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>KDE Plasma</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-lxqt-desktop/">task-lxqt-desktop</a></td>
               <td>3.73</td>
               <td>LXQt</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/tasksel/">tasksel</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>tool for selecting tasks for installation on Debian systems</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/tasksel-data/">tasksel-data</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>official tasks used for installation of Debian systems</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-terser/terser/">terser</a></td>
               <td>5.16.5-2</td>
               <td>parser/mangler/compressor for ES6+ - CLI tool</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/thin-provisioning-tools/thin-provisioning-tools/">thin-provisioning-tools</a></td>
               <td>0.9.0-2</td>
               <td>Tools for handling thinly provisioned device-mapper meta-data</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/timgm6mb-soundfont/timgm6mb-soundfont/">timgm6mb-soundfont</a></td>
               <td>1.3-5</td>
               <td>TimGM6mb SoundFont from MuseScore 1.3</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/toilet/toilet/">toilet</a></td>
               <td>0.3-1.4</td>
               <td>display large colourful characters in text mode</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/toilet/toilet-fonts/">toilet-fonts</a></td>
               <td>0.3-1.4</td>
               <td>collection of TOIlet fonts</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tor/tor/">tor</a></td>
               <td>0.4.8.14-1~bpo12+1</td>
               <td>anonymizing overlay network for TCP</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tor/tor-geoipdb/">tor-geoipdb</a></td>
               <td>0.4.8.14-1~bpo12+1</td>
               <td>GeoIP database for Tor</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/torsocks/torsocks/">torsocks</a></td>
               <td>2.4.0-1</td>
               <td>use SOCKS-friendly applications with Tor</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tpm-udev/tpm-udev/">tpm-udev</a></td>
               <td>0.6</td>
               <td>udev rules for TPM modules</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/traceroute/traceroute/">traceroute</a></td>
               <td>1:2.1.2-1</td>
               <td>Traces the route taken by packets over an IPv4/IPv6 network</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tree/tree/">tree</a></td>
               <td>2.1.0-1</td>
               <td>displays an indented directory tree, in color</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tzdata/tzdata/">tzdata</a></td>
               <td>2025b-0+deb12u1</td>
               <td>time zone and daylight-saving time data</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/ucf/ucf/">ucf</a></td>
               <td>3.0043+nmu1+deb12u1</td>
               <td>Update Configuration File(s): preserve user changes to config files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/udev/">udev</a></td>
               <td>254.22-1~bpo12+1</td>
               <td>/dev/ and hotplug management daemon</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/udftools/udftools/">udftools</a></td>
               <td>2.3-1</td>
               <td>tools for UDF filesystems and DVD/CD-R(W) drives</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/udisks2/udisks2/">udisks2</a></td>
               <td>2.9.4-4</td>
               <td>D-Bus service to access and manipulate storage devices</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/ufw/ufw/">ufw</a></td>
               <td>0.36.2-1</td>
               <td>program for managing a Netfilter firewall</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/shadow/uidmap/">uidmap</a></td>
               <td>1:4.13+dfsg1-1+deb12u1</td>
               <td>programs to help use subuids</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/unar/unar/">unar</a></td>
               <td>1.10.7+ds1+really1.10.1-2+b2</td>
               <td>Unarchiver for a variety of file formats</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/unzip/unzip/">unzip</a></td>
               <td>6.0-28</td>
               <td>De-archiver for .zip files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/update-inetd/update-inetd/">update-inetd</a></td>
               <td>4.53</td>
               <td>inetd configuration file updater</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/upower/upower/">upower</a></td>
               <td>0.99.20-2</td>
               <td>abstraction for power management</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/usb-modeswitch/usb-modeswitch/">usb-modeswitch</a></td>
               <td>2.6.1-3+b1</td>
               <td>mode switching tool for controlling "flip flop" USB devices</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/usb-modeswitch-data/usb-modeswitch-data/">usb-modeswitch-data</a></td>
               <td>20191128-5</td>
               <td>mode switching data for usb-modeswitch</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:39:18</td>
             </tr>
 
         </tbody>
@@ -762,7 +770,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
